Rename phrases (https://github.com/osmandapp/OsmAnd/issues/18431)

--- a/OsmAnd/res/values-ars/phrases.xml
+++ b/OsmAnd/res/values-ars/phrases.xml
@@ -337,7 +337,7 @@
     <string name="poi_water_source_water_works">محطة معالجة المياه</string>
     <string name="poi_water_source_tube_well">شيب مياه</string>
     <string name="poi_vaccination_covid19">لقاح كورونا COVID19</string>
-    <string name="poi_health_specialty_vaccination_yes">يتوفر لدهم لقاح</string>
+    <string name="poi_healthcare_speciality_vaccination">يتوفر لدهم لقاح</string>
     <string name="poi_lifeguard_base">منصة الانقاذ</string>
     <string name="poi_siren">صفارت إنذار</string>
     <string name="poi_diplomatic_services_non_immigrant_visas_no">لا</string>
@@ -1176,31 +1176,31 @@
     <string name="poi_street_cabinet">كبينة مرافق وخدمات في الشارع</string>
     <string name="poi_firepit">حفرة إشعال نار</string>
     <string name="poi_health_specialty_emergency_medicine_no">التخصصات الصحية: طب الطوارئ والحوادث: لا يوجد</string>
-    <string name="poi_health_specialty_emergency_yes">طب الطوارئ والحوادث</string>
-    <string name="poi_health_specialty_maternity_yes">الأمومة</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">جراحة الأسنان والفم والفك و الوجه</string>
-    <string name="poi_health_specialty_pulmonology_yes">طب الجهاز التنفسي</string>
-    <string name="poi_health_specialty_anaesthetics_yes">التخدير</string>
-    <string name="poi_health_specialty_osteopathy_yes">تجبير العظام</string>
-    <string name="poi_health_specialty_biology_yes">احياء سريرية</string>
-    <string name="poi_health_specialty_trauma_yes">الرضوض</string>
-    <string name="poi_health_specialty_cardiology_yes">أمراض القلب</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">جلدية-تناسلية</string>
-    <string name="poi_health_specialty_neurology_yes">طب الجهاز العصبي</string>
-    <string name="poi_health_specialty_psychiatry_yes">الطب النفسي</string>
-    <string name="poi_health_specialty_radiotherapy_yes">العلاج الإشعاعي</string>
-    <string name="poi_health_specialty_radiology_yes">الأشعة</string>
-    <string name="poi_health_specialty_surgery_yes">الجراحة العامة</string>
-    <string name="poi_health_specialty_urology_yes">المسالك البولية</string>
-    <string name="poi_health_specialty_dermatology_yes">الأمراض الجلدية</string>
+    <string name="poi_healthcare_speciality_emergency">طب الطوارئ والحوادث</string>
+    <string name="poi_healthcare_speciality_maternity">الأمومة</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">جراحة الأسنان والفم والفك و الوجه</string>
+    <string name="poi_healthcare_speciality_pulmonology">طب الجهاز التنفسي</string>
+    <string name="poi_healthcare_speciality_anaesthetics">التخدير</string>
+    <string name="poi_healthcare_speciality_osteopathy">تجبير العظام</string>
+    <string name="poi_healthcare_speciality_biology">احياء سريرية</string>
+    <string name="poi_healthcare_speciality_trauma">الرضوض</string>
+    <string name="poi_healthcare_speciality_cardiology">أمراض القلب</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">جلدية-تناسلية</string>
+    <string name="poi_healthcare_speciality_neurology">طب الجهاز العصبي</string>
+    <string name="poi_healthcare_speciality_psychiatry">الطب النفسي</string>
+    <string name="poi_healthcare_speciality_radiotherapy">العلاج الإشعاعي</string>
+    <string name="poi_healthcare_speciality_radiology">الأشعة</string>
+    <string name="poi_healthcare_speciality_surgery">الجراحة العامة</string>
+    <string name="poi_healthcare_speciality_urology">المسالك البولية</string>
+    <string name="poi_healthcare_speciality_dermatology">الأمراض الجلدية</string>
     <string name="poi_health_specialty_paediatrics_no">التخصصات الصحية : طب الأطفال : لا يوجد</string>
-    <string name="poi_health_specialty_paediatrics_yes">طب الأطفال</string>
-    <string name="poi_health_specialty_otolaryngology_yes">الأنف والأذن والحنجرة</string>
-    <string name="poi_health_specialty_orthopaedics_yes">طب العظام</string>
-    <string name="poi_health_specialty_internal_yes">طب باطني</string>
-    <string name="poi_health_specialty_gynaecology_yes">طب النساء والتوليد</string>
-    <string name="poi_health_specialty_ophthalmology_yes">طب العيون</string>
-    <string name="poi_health_specialty_general_yes">طبيب عام</string>
+    <string name="poi_healthcare_speciality_paediatrics">طب الأطفال</string>
+    <string name="poi_healthcare_speciality_otolaryngology">الأنف والأذن والحنجرة</string>
+    <string name="poi_healthcare_speciality_orthopaedics">طب العظام</string>
+    <string name="poi_healthcare_speciality_internal">طب باطني</string>
+    <string name="poi_healthcare_speciality_gynaecology">طب النساء والتوليد</string>
+    <string name="poi_healthcare_speciality_ophthalmology">طب العيون</string>
+    <string name="poi_healthcare_speciality_general">طبيب عام</string>
     <string name="poi_aerialway_length">الطول</string>
     <string name="poi_fireworks">متجر الألعاب النارية</string>
     <string name="poi_craft_electronics_repair">إصلاح إلكترونيات</string>
@@ -1676,52 +1676,52 @@
     <string name="poi_fitness">اللياقة البدنية</string>
     <string name="poi_fitness_centre">مركز لياقة بدنية</string>
     <string name="poi_building_type_pyramid">نوع البناء: هرمي</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">الأدوية المسكنة</string>
-    <string name="poi_health_specialty_behavior_yes">السلوك</string>
-    <string name="poi_health_specialty_depth_psychology_yes">علم عمق النفس</string>
-    <string name="poi_health_specialty_naturopathy_yes">العلاج الطبيعي</string>
-    <string name="poi_health_specialty_chiropractic_yes">العلاج بتقويم العمود الفقري</string>
-    <string name="poi_health_specialty_herbalism_yes">طبيب الأعشاب</string>
-    <string name="poi_health_specialty_reiki_yes">علاج بالطاقة</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">الطب الصيني التقليدي</string>
-    <string name="poi_health_specialty_homeopathy_yes">معالجة المثلية</string>
-    <string name="poi_health_specialty_acupuncture_yes">الوخز بالإبر</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">الطب النفسي للكبار</string>
-    <string name="poi_health_specialty_podiatry_yes">علاج الارجل</string>
-    <string name="poi_health_specialty_sports_medicine_yes">الطب الرياضي</string>
-    <string name="poi_health_specialty_manual_therapy_yes">العلاج اليدوي</string>
-    <string name="poi_health_specialty_speech_therapy_yes">علاج النطق</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">علم الأمراض السريرية</string>
-    <string name="poi_health_specialty_optometry_yes">نظارات/بصريات</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">طب الإدمان</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">الأدوية المسكنة</string>
+    <string name="poi_healthcare_speciality_behavior">السلوك</string>
+    <string name="poi_healthcare_speciality_depth_psychology">علم عمق النفس</string>
+    <string name="poi_healthcare_speciality_naturopathy">العلاج الطبيعي</string>
+    <string name="poi_healthcare_speciality_chiropractic">العلاج بتقويم العمود الفقري</string>
+    <string name="poi_healthcare_speciality_herbalism">طبيب الأعشاب</string>
+    <string name="poi_healthcare_speciality_reiki">علاج بالطاقة</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">الطب الصيني التقليدي</string>
+    <string name="poi_healthcare_speciality_homeopathy">معالجة المثلية</string>
+    <string name="poi_healthcare_speciality_acupuncture">الوخز بالإبر</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">الطب النفسي للكبار</string>
+    <string name="poi_healthcare_speciality_podiatry">علاج الارجل</string>
+    <string name="poi_healthcare_speciality_sports_medicine">الطب الرياضي</string>
+    <string name="poi_healthcare_speciality_manual_therapy">العلاج اليدوي</string>
+    <string name="poi_healthcare_speciality_speech_therapy">علاج النطق</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">علم الأمراض السريرية</string>
+    <string name="poi_healthcare_speciality_optometry">نظارات/بصريات</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">طب الإدمان</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">التخصص الصحي: ولادة (قيصرية): لا</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">طب التوليد (القيصرية)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">طب التوليد (القيصرية)</string>
     <string name="poi_health_specialty_social_paediatrics_no">التخصصات الصحية: طب الأطفال الاجتماعية: لا يوجد</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">طب الأطفال الاجتماعي</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">طب الأطفال الاجتماعي</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">التخصصات الصحية: طب التوليد (ما قبل الولادة): لا يوجد</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">طب التوليد (ما قبل الولادة)</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">طب التوليد (ما قبل الولادة)</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">التخصصات الصحية: طب التوليد (بعد الولادة): لا يوجد</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">طب التوليد (بعد الولادة)</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">طب التوليد (بعد الولادة)</string>
     <string name="poi_health_specialty_tropical_medicine_no">التخصص الصحي: الطب الاستوائي: لا</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">الطب الاستوائي</string>
-    <string name="poi_health_specialty_oncology_yes">علم الأورام</string>
-    <string name="poi_health_specialty_pathology_yes">التشريح المرضي</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">الطب النووي</string>
-    <string name="poi_health_specialty_endocrinology_yes">الغدد الصماء</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">الطب النفسي العصبي</string>
-    <string name="poi_health_specialty_neurosurgery_yes">الجراحة العصبية</string>
-    <string name="poi_health_specialty_nephrology_yes">طب وأمراض الكلى</string>
-    <string name="poi_health_specialty_stomatology_yes">طب الأسنان</string>
-    <string name="poi_health_specialty_gastroenterology_yes">أمراض الجهاز الهضمي</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">الأشعة التشخيصية</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">جراحة الفك-الوجه</string>
-    <string name="poi_health_specialty_physiatry_yes">الطب الطبيعي وإعادة التأهيل</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">الطب النفسي للأطفال</string>
-    <string name="poi_health_specialty_occupational_yes">العلاج المهني</string>
-    <string name="poi_health_specialty_biochemistry_yes">الكيمياء البيولوجية</string>
-    <string name="poi_health_specialty_physiotherapy_yes">العلاج الطبيعي</string>
-    <string name="poi_health_specialty_orthodontics_yes">تقويم الأسنان</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">جراحة التجميل</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">الطب الاستوائي</string>
+    <string name="poi_healthcare_speciality_oncology">علم الأورام</string>
+    <string name="poi_healthcare_speciality_pathology">التشريح المرضي</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">الطب النووي</string>
+    <string name="poi_healthcare_speciality_endocrinology">الغدد الصماء</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">الطب النفسي العصبي</string>
+    <string name="poi_healthcare_speciality_neurosurgery">الجراحة العصبية</string>
+    <string name="poi_healthcare_speciality_nephrology">طب وأمراض الكلى</string>
+    <string name="poi_healthcare_speciality_stomatology">طب الأسنان</string>
+    <string name="poi_healthcare_speciality_gastroenterology">أمراض الجهاز الهضمي</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">الأشعة التشخيصية</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">جراحة الفك-الوجه</string>
+    <string name="poi_healthcare_speciality_physiatry">الطب الطبيعي وإعادة التأهيل</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">الطب النفسي للأطفال</string>
+    <string name="poi_healthcare_speciality_occupational">العلاج المهني</string>
+    <string name="poi_healthcare_speciality_biochemistry">الكيمياء البيولوجية</string>
+    <string name="poi_healthcare_speciality_physiotherapy">العلاج الطبيعي</string>
+    <string name="poi_healthcare_speciality_orthodontics">تقويم الأسنان</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">جراحة التجميل</string>
     <string name="poi_surface_pebblestone">السطح: حصى</string>
     <string name="poi_surface_paving_stones">السطح: حجارة الرصف</string>
     <string name="poi_surface_cobblestone">السطح: حصى</string>
@@ -3752,7 +3752,7 @@
     <string name="poi_washing_machine">غسالة</string>
     <string name="poi_tents">خيام</string>
     <string name="poi_massage_type">نوع التدليك</string>
-    <string name="poi_health_specialty">التخصص الصحي</string>
+    <string name="poi_healthcare_speciality">التخصص الصحي</string>
     <string name="poi_diet">حمية</string>
     <string name="poi_nudism">العري</string>
     <string name="poi_beach_surface_type">سطح</string>
