--- a/OsmAnd/res/values-de/phrases.xml
+++ b/OsmAnd/res/values-de/phrases.xml
@@ -2253,76 +2253,76 @@
     <string name="poi_wetland_palsa_bog">Palsamoor</string>
     <string name="poi_payment_icsf_yes">IC-gespeicherte Fährfahrkarten</string>
     <string name="poi_payment_icsf_no">IC-gespeicherte Fährfahrkarten nicht akzeptiert</string>
-    <string name="poi_health_specialty_general_yes">Allgemeinmediziner</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Augenheilkunde</string>
-    <string name="poi_health_specialty_gynaecology_yes">Gynäkologie</string>
-    <string name="poi_health_specialty_internal_yes">Innere Medizin</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Orthopädie</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Hals-Nasen-Ohrenheilkunde</string>
-    <string name="poi_health_specialty_paediatrics_yes">Kinderheilkunde</string>
+    <string name="poi_healthcare_speciality_general">Allgemeinmediziner</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Augenheilkunde</string>
+    <string name="poi_healthcare_speciality_gynaecology">Gynäkologie</string>
+    <string name="poi_healthcare_speciality_internal">Innere Medizin</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Orthopädie</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Hals-Nasen-Ohrenheilkunde</string>
+    <string name="poi_healthcare_speciality_paediatrics">Kinderheilkunde</string>
     <string name="poi_health_specialty_paediatrics_no">Kinderheilkunde: nein</string>
-    <string name="poi_health_specialty_dermatology_yes">Dermatologie</string>
-    <string name="poi_health_specialty_urology_yes">Urologie</string>
-    <string name="poi_health_specialty_surgery_yes">Allgemeine Chirurgie</string>
-    <string name="poi_health_specialty_radiology_yes">Radiologie</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psychiatrie</string>
-    <string name="poi_health_specialty_neurology_yes">Neurologie</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Dermato- und Venerologie</string>
-    <string name="poi_health_specialty_cardiology_yes">Kardiologie</string>
-    <string name="poi_health_specialty_trauma_yes">Traumatologie</string>
-    <string name="poi_health_specialty_biology_yes">Klinische Biologie</string>
-    <string name="poi_health_specialty_osteopathy_yes">Osteopathie</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Anästhesiologie</string>
-    <string name="poi_health_specialty_pulmonology_yes">Pneumologie</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Zahn-, Mund-, Kiefer- und Gesichtschirurgie</string>
-    <string name="poi_health_specialty_maternity_yes">Mutterschaft</string>
-    <string name="poi_health_specialty_emergency_yes">Unfall- und Notfallmedizin</string>
+    <string name="poi_healthcare_speciality_dermatology">Dermatologie</string>
+    <string name="poi_healthcare_speciality_urology">Urologie</string>
+    <string name="poi_healthcare_speciality_surgery">Allgemeine Chirurgie</string>
+    <string name="poi_healthcare_speciality_radiology">Radiologie</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psychiatrie</string>
+    <string name="poi_healthcare_speciality_neurology">Neurologie</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Dermato- und Venerologie</string>
+    <string name="poi_healthcare_speciality_cardiology">Kardiologie</string>
+    <string name="poi_healthcare_speciality_trauma">Traumatologie</string>
+    <string name="poi_healthcare_speciality_biology">Klinische Biologie</string>
+    <string name="poi_healthcare_speciality_osteopathy">Osteopathie</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Anästhesiologie</string>
+    <string name="poi_healthcare_speciality_pulmonology">Pneumologie</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Zahn-, Mund-, Kiefer- und Gesichtschirurgie</string>
+    <string name="poi_healthcare_speciality_maternity">Mutterschaft</string>
+    <string name="poi_healthcare_speciality_emergency">Unfall- und Notfallmedizin</string>
     <string name="poi_health_specialty_emergency_medicine_no">Fachrichtung: Unfall- und Notfallmedizin: nein</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Plastische Chirurgie</string>
-    <string name="poi_health_specialty_orthodontics_yes">Kieferorthopädie</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Krankengymnastik</string>
-    <string name="poi_health_specialty_biochemistry_yes">Biologische Chemie</string>
-    <string name="poi_health_specialty_occupational_yes">Ergotherapie</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Kinderpsychiatrie</string>
-    <string name="poi_health_specialty_physiatry_yes">Physikalische Medizin und Rehabilitation</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Kiefer- und Gesichtschirurgie</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Diagnostische Radiologie</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gastroenterologie</string>
-    <string name="poi_health_specialty_stomatology_yes">Zahnheilkunde</string>
-    <string name="poi_health_specialty_nephrology_yes">Nephrologie (Nierenerkrankungen)</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Neurochirurgie</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Neuropsychiatrie</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endokrinologie</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Nuklearmedizin</string>
-    <string name="poi_health_specialty_pathology_yes">Pathologie</string>
-    <string name="poi_health_specialty_oncology_yes">Onkologie</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Tropenmedizin</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Plastische Chirurgie</string>
+    <string name="poi_healthcare_speciality_orthodontics">Kieferorthopädie</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Krankengymnastik</string>
+    <string name="poi_healthcare_speciality_biochemistry">Biologische Chemie</string>
+    <string name="poi_healthcare_speciality_occupational">Ergotherapie</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Kinderpsychiatrie</string>
+    <string name="poi_healthcare_speciality_physiatry">Physikalische Medizin und Rehabilitation</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Kiefer- und Gesichtschirurgie</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Diagnostische Radiologie</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gastroenterologie</string>
+    <string name="poi_healthcare_speciality_stomatology">Zahnheilkunde</string>
+    <string name="poi_healthcare_speciality_nephrology">Nephrologie (Nierenerkrankungen)</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Neurochirurgie</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Neuropsychiatrie</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endokrinologie</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Nuklearmedizin</string>
+    <string name="poi_healthcare_speciality_pathology">Pathologie</string>
+    <string name="poi_healthcare_speciality_oncology">Onkologie</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Tropenmedizin</string>
     <string name="poi_health_specialty_tropical_medicine_no">Tropenmedizin: nein</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">Geburtshilfe (nachgeburtlich)</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">Geburtshilfe (nachgeburtlich)</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">Geburtshilfe (nachgeburtlich): nein</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Geburtshilfe (vorgeburtlich)</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Geburtshilfe (vorgeburtlich)</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Geburtshilfe (vorgeburtlich): nein</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Sozialpädiatrie</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Sozialpädiatrie</string>
     <string name="poi_health_specialty_social_paediatrics_no">Sozialpädiatrie: nein</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Geburtshilfe (Kaiserschnitt)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Geburtshilfe (Kaiserschnitt)</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Geburtshilfe (Kaiserschnitt): nein</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">Suchtmedizin</string>
-    <string name="poi_health_specialty_optometry_yes">Optometrie</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Klinische Pathologie</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Logopädie</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Manualtherapie</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Sportmedizin</string>
-    <string name="poi_health_specialty_podiatry_yes">Podologie</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Erwachsenenpsychiatrie</string>
-    <string name="poi_health_specialty_acupuncture_yes">Akupunktur</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homöopathie</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Traditionelle chinesische Medizin</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
-    <string name="poi_health_specialty_herbalism_yes">Kräuterkunde</string>
-    <string name="poi_health_specialty_chiropractic_yes">Chiropraktik</string>
-    <string name="poi_health_specialty_naturopathy_yes">Naturheilkunde</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Tiefenpsychologie</string>
-    <string name="poi_health_specialty_behavior_yes">Verhaltenstherapie</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">Suchtmedizin</string>
+    <string name="poi_healthcare_speciality_optometry">Optometrie</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Klinische Pathologie</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Logopädie</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Manualtherapie</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Sportmedizin</string>
+    <string name="poi_healthcare_speciality_podiatry">Podologie</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Erwachsenenpsychiatrie</string>
+    <string name="poi_healthcare_speciality_acupuncture">Akupunktur</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homöopathie</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Traditionelle chinesische Medizin</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
+    <string name="poi_healthcare_speciality_herbalism">Kräuterkunde</string>
+    <string name="poi_healthcare_speciality_chiropractic">Chiropraktik</string>
+    <string name="poi_healthcare_speciality_naturopathy">Naturheilkunde</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Tiefenpsychologie</string>
+    <string name="poi_healthcare_speciality_behavior">Verhaltenstherapie</string>
     <string name="poi_building_type_pyramid">Gebäudeart: Pyramide</string>
     <string name="poi_fitness_centre">Fitnesscenter</string>
     <string name="poi_fitness">Fitness</string>
@@ -2504,7 +2504,7 @@
     <string name="poi_health_service_child_care_no">Gesundheitswesen: Kinderbetreuung: nein</string>
     <string name="poi_health_service_test_yes">Gesundheitswesen: Test: ja</string>
     <string name="poi_health_service_test_no">Gesundheitswesen: Test: nein</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Palliativmedizin</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Palliativmedizin</string>
     <string name="poi_fire_hydrant_type_dry_barrel">entleert (Frost)</string>
     <string name="poi_health_person_type_healer">Funktion im Gesundheitssektor: Therapeut</string>
     <string name="poi_health_person_type_midwife">Funktion im Gesundheitssektor: Hebamme</string>
@@ -2894,7 +2894,7 @@
     <string name="poi_cuisine_waffle">Waffeln</string>
     <string name="poi_cuisine_chocolate">Schokolade</string>
     <string name="poi_cuisine_wine">Wein</string>
-    <string name="poi_health_specialty">Medizinisches Fachgebiet</string>
+    <string name="poi_healthcare_speciality">Medizinisches Fachgebiet</string>
     <string name="poi_massage_type">Massageart</string>
     <string name="poi_cuisine_pancake">Pfannkuchen</string>
     <string name="poi_cuisine_fine_dining">Gehobene Küche</string>
@@ -3552,7 +3552,7 @@
     <string name="poi_rtsa_scale_3b_asterisk">3B*</string>
     <string name="poi_flare">Gasfackel/Fackel</string>
     <string name="poi_change_delete">Gelöschtes Objekt</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Strahlentherapie</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Strahlentherapie</string>
     <string name="poi_climbing_crag_filter">Kletterfelsen</string>
     <string name="poi_rescue_box">Selbsthilfebox</string>
     <string name="poi_climbing_crag">ja;Kletterfelsen</string>
@@ -3860,7 +3860,7 @@
     <string name="poi_mobile_money_agent">Mobiler Geldvermittler</string>
     <string name="poi_lifeguard_base">Rettungsschwimmerbasis</string>
     <string name="poi_vaccination_covid19">Impfung: COVID-19</string>
-    <string name="poi_health_specialty_vaccination_yes">Impfung</string>
+    <string name="poi_healthcare_speciality_vaccination">Impfung</string>
     <string name="poi_water_source_tube_well">Rammbrunnen</string>
     <string name="poi_water_source_lake">See</string>
     <string name="poi_water_source_river">Fluss</string>
@@ -4603,34 +4603,34 @@
     <string name="poi_socket_typee_output_medium">Mittel</string>
     <string name="poi_socket_typee_voltage_filter">Typ E-Steckerspannung</string>
     <string name="poi_socket_typee_current">Sockel: Typ E: Strom</string>
-    <string name="poi_health_specialty_allergology_yes">Allergologie</string>
+    <string name="poi_healthcare_speciality_allergology">Allergologie</string>
     <string name="poi_socket_typee_output_high">Hoch</string>
     <string name="poi_socket_typee_voltage_high">Hoch</string>
     <string name="poi_socket_typee">Sockel: Typ E</string>
     <string name="poi_socket_typee_output_low">Niedrig</string>
-    <string name="poi_health_specialty_rheumatology_yes">Rheumatologie</string>
-    <string name="poi_health_specialty_fertility_yes">Fruchtbarkeit</string>
-    <string name="poi_health_specialty_dialysis_yes">Dialyse</string>
-    <string name="poi_health_specialty_endodontics_yes">Endodontie</string>
+    <string name="poi_healthcare_speciality_rheumatology">Rheumatologie</string>
+    <string name="poi_healthcare_speciality_fertility">Fruchtbarkeit</string>
+    <string name="poi_healthcare_speciality_dialysis">Dialyse</string>
+    <string name="poi_healthcare_speciality_endodontics">Endodontie</string>
     <string name="poi_checkpoint_cycling">Fahrrad-Kontrollpunkt</string>
-    <string name="poi_health_specialty_periodontics_yes">Parodontologie</string>
-    <string name="poi_health_specialty_covid19_yes">COVID-19</string>
-    <string name="poi_health_specialty_vascular_surgery_yes">Gefäßchirurgie</string>
+    <string name="poi_healthcare_speciality_periodontics">Parodontologie</string>
+    <string name="poi_healthcare_speciality_covid19">COVID-19</string>
+    <string name="poi_healthcare_speciality_vascular_surgery">Gefäßchirurgie</string>
     <string name="poi_socket_typee_yes">Typ E</string>
-    <string name="poi_health_specialty_massage_therapy_yes">Massagetherapie</string>
+    <string name="poi_healthcare_speciality_massage_therapy">Massagetherapie</string>
     <string name="poi_socket_typee_voltage_low">Niedrig</string>
     <string name="poi_socket_typee_output_filter">Typ E-Steckerausgang</string>
-    <string name="poi_health_specialty_community_yes">Öffentlicher Gesundheitsdienst</string>
-    <string name="poi_health_specialty_cardiac_surgery_yes">Herzchirurgie</string>
-    <string name="poi_health_specialty_blood_check_yes">Blutuntersuchung</string>
-    <string name="poi_health_specialty_intensive_yes">Intensiv</string>
+    <string name="poi_healthcare_speciality_community">Öffentlicher Gesundheitsdienst</string>
+    <string name="poi_healthcare_speciality_cardiac_surgery">Herzchirurgie</string>
+    <string name="poi_healthcare_speciality_blood_check">Blutuntersuchung</string>
+    <string name="poi_healthcare_speciality_intensive">Intensiv</string>
     <string name="poi_socket_typee_voltage_medium">Mittel</string>
-    <string name="poi_health_specialty_haematology_yes">Hämatologie</string>
-    <string name="poi_health_specialty_geriatrics_yes">Geriatrie</string>
-    <string name="poi_health_specialty_paediatric_surgery_yes">Pädiatrische Chirurgie</string>
-    <string name="poi_health_specialty_paediatric_dentistry_yes">Pädiatrische Zahnmedizin</string>
-    <string name="poi_health_specialty_weight_loss_yes">Gewichtsreduktion</string>
-    <string name="poi_health_specialty_infectious_diseases_yes">Infektionskrankheiten</string>
+    <string name="poi_healthcare_speciality_haematology">Hämatologie</string>
+    <string name="poi_healthcare_speciality_geriatrics">Geriatrie</string>
+    <string name="poi_healthcare_speciality_paediatric_surgery">Pädiatrische Chirurgie</string>
+    <string name="poi_healthcare_speciality_paediatric_dentistry">Pädiatrische Zahnmedizin</string>
+    <string name="poi_healthcare_speciality_weight_loss">Gewichtsreduktion</string>
+    <string name="poi_healthcare_speciality_infectious_diseases">Infektionskrankheiten</string>
     <string name="poi_socket_typee_voltage">Sockel: Typ E: Spannung</string>
     <string name="poi_socket_typee_output">Sockel: Typ E: Leistung</string>
     <string name="poi_dressing_room">Umkleideraum</string>
