--- a/OsmAnd/res/values-et/phrases.xml
+++ b/OsmAnd/res/values-et/phrases.xml
@@ -246,7 +246,7 @@
     <string name="poi_beach_surface_type">Pind</string>
     <string name="poi_nudism">Nudistid</string>
     <string name="poi_diet">Toitumine</string>
-    <string name="poi_health_specialty">Tervishoiu eriala</string>
+    <string name="poi_healthcare_speciality">Tervishoiu eriala</string>
     <string name="poi_massage_type">Massaaži liik</string>
     <string name="poi_tents">Telgid</string>
     <string name="poi_washing_machine">Pesumasin</string>
@@ -2375,76 +2375,76 @@
     <string name="poi_pump_yes">Jah;pump</string>
     <string name="poi_aerialway_length">Pikkus</string>
     <string name="poi_internet_access_type_yes">Internetiühendus olemas</string>
-    <string name="poi_health_specialty_general_yes">Perearst</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Oftalmoloogia</string>
-    <string name="poi_health_specialty_gynaecology_yes">Günekoloogia</string>
-    <string name="poi_health_specialty_internal_yes">Sisemeditsiin</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ortopeedia</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Otolarüngoloogia</string>
-    <string name="poi_health_specialty_paediatrics_yes">Pediaatria</string>
+    <string name="poi_healthcare_speciality_general">Perearst</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Oftalmoloogia</string>
+    <string name="poi_healthcare_speciality_gynaecology">Günekoloogia</string>
+    <string name="poi_healthcare_speciality_internal">Sisemeditsiin</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ortopeedia</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Otolarüngoloogia</string>
+    <string name="poi_healthcare_speciality_paediatrics">Pediaatria</string>
     <string name="poi_health_specialty_paediatrics_no">Tervise eriala: pediaatria: ei</string>
-    <string name="poi_health_specialty_dermatology_yes">Dermatoloogia</string>
-    <string name="poi_health_specialty_urology_yes">Uroloogia</string>
-    <string name="poi_health_specialty_surgery_yes">Üldkirurgia</string>
-    <string name="poi_health_specialty_radiology_yes">Radioloogia</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psühhiaatria</string>
-    <string name="poi_health_specialty_neurology_yes">Neuroloogia</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Dermatoveneroloogia</string>
-    <string name="poi_health_specialty_cardiology_yes">Kardioloogia</string>
-    <string name="poi_health_specialty_trauma_yes">Traumatoloogia</string>
-    <string name="poi_health_specialty_biology_yes">Laborimeditsiin</string>
-    <string name="poi_health_specialty_osteopathy_yes">Osteopaatia</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Valuvaigistid</string>
-    <string name="poi_health_specialty_pulmonology_yes">Hingamisteede meditsiin</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Hamba-, suu- ja näo-lõualuukirurgia</string>
-    <string name="poi_health_specialty_maternity_yes">Rasedus</string>
-    <string name="poi_health_specialty_emergency_yes">Õnnetusjuhtumi- ja erakorraline meditsiin</string>
+    <string name="poi_healthcare_speciality_dermatology">Dermatoloogia</string>
+    <string name="poi_healthcare_speciality_urology">Uroloogia</string>
+    <string name="poi_healthcare_speciality_surgery">Üldkirurgia</string>
+    <string name="poi_healthcare_speciality_radiology">Radioloogia</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psühhiaatria</string>
+    <string name="poi_healthcare_speciality_neurology">Neuroloogia</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Dermatoveneroloogia</string>
+    <string name="poi_healthcare_speciality_cardiology">Kardioloogia</string>
+    <string name="poi_healthcare_speciality_trauma">Traumatoloogia</string>
+    <string name="poi_healthcare_speciality_biology">Laborimeditsiin</string>
+    <string name="poi_healthcare_speciality_osteopathy">Osteopaatia</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Valuvaigistid</string>
+    <string name="poi_healthcare_speciality_pulmonology">Hingamisteede meditsiin</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Hamba-, suu- ja näo-lõualuukirurgia</string>
+    <string name="poi_healthcare_speciality_maternity">Rasedus</string>
+    <string name="poi_healthcare_speciality_emergency">Õnnetusjuhtumi- ja erakorraline meditsiin</string>
     <string name="poi_health_specialty_emergency_medicine_no">Tervise eriala: õnnetusjuhtumi- ja erakorraline meditsiin: ei</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Ilukirurgia</string>
-    <string name="poi_health_specialty_orthodontics_yes">Ortodontia</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Füsioteraapia</string>
-    <string name="poi_health_specialty_biochemistry_yes">Bioloogiline keemia</string>
-    <string name="poi_health_specialty_occupational_yes">Tööteraapia</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Lastepsühhiaatria</string>
-    <string name="poi_health_specialty_physiatry_yes">Füüsiline meditsiin ja taastusravi</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Näo-lõualuu kirurgia</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Diagnostiline radioloogia</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gastroenteroloogia</string>
-    <string name="poi_health_specialty_stomatology_yes">Hambaravi</string>
-    <string name="poi_health_specialty_nephrology_yes">Nefroloogia (neeruhaigused)</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Neurokirurgia</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Neuropsühhiaatria</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endokrinoloogia</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Tuumameditsiin</string>
-    <string name="poi_health_specialty_pathology_yes">Patoloogiline anatoomia</string>
-    <string name="poi_health_specialty_oncology_yes">Onkoloogia</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Troopiline meditsiin</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Ilukirurgia</string>
+    <string name="poi_healthcare_speciality_orthodontics">Ortodontia</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Füsioteraapia</string>
+    <string name="poi_healthcare_speciality_biochemistry">Bioloogiline keemia</string>
+    <string name="poi_healthcare_speciality_occupational">Tööteraapia</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Lastepsühhiaatria</string>
+    <string name="poi_healthcare_speciality_physiatry">Füüsiline meditsiin ja taastusravi</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Näo-lõualuu kirurgia</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Diagnostiline radioloogia</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gastroenteroloogia</string>
+    <string name="poi_healthcare_speciality_stomatology">Hambaravi</string>
+    <string name="poi_healthcare_speciality_nephrology">Nefroloogia (neeruhaigused)</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Neurokirurgia</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Neuropsühhiaatria</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endokrinoloogia</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Tuumameditsiin</string>
+    <string name="poi_healthcare_speciality_pathology">Patoloogiline anatoomia</string>
+    <string name="poi_healthcare_speciality_oncology">Onkoloogia</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Troopiline meditsiin</string>
     <string name="poi_health_specialty_tropical_medicine_no">Tervise eriala: troopiline meditsiin: ei</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">Sünnitusabi (sünnijärgne)</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">Sünnitusabi (sünnijärgne)</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">Tervise eriala: sünnitusabi (sünnijärgne): ei</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Sünnitusabi (sünnieelne)</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Sünnitusabi (sünnieelne)</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Tervise eriala: sünnitusabi (sünnieelne): ei</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Sotsiaalpediaatria</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Sotsiaalpediaatria</string>
     <string name="poi_health_specialty_social_paediatrics_no">Tervise eriala: sotsiaalpediaatria: ei</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Sünnitusabi (keisrilõike osa)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Sünnitusabi (keisrilõike osa)</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Tervise eriala: sünnitusabi (keisrilõike osa): ei</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">Sõltuvus meditsiin</string>
-    <string name="poi_health_specialty_optometry_yes">Optomeetria</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Kliiniline patoloogia</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Logopeed</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Manuaalteraapia</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Spordimeditsiin</string>
-    <string name="poi_health_specialty_podiatry_yes">Podoloogia</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Täiskasvanute psühhiaatria</string>
-    <string name="poi_health_specialty_acupuncture_yes">Nõelravi</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homöopaatia</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Traditsiooniline hiina meditsiin</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
-    <string name="poi_health_specialty_herbalism_yes">Herbalism</string>
-    <string name="poi_health_specialty_chiropractic_yes">Kiropraktika</string>
-    <string name="poi_health_specialty_naturopathy_yes">Loodusravi</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Süvapsühholoogia</string>
-    <string name="poi_health_specialty_behavior_yes">Käitumine</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">Sõltuvus meditsiin</string>
+    <string name="poi_healthcare_speciality_optometry">Optomeetria</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Kliiniline patoloogia</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Logopeed</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Manuaalteraapia</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Spordimeditsiin</string>
+    <string name="poi_healthcare_speciality_podiatry">Podoloogia</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Täiskasvanute psühhiaatria</string>
+    <string name="poi_healthcare_speciality_acupuncture">Nõelravi</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homöopaatia</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Traditsiooniline hiina meditsiin</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
+    <string name="poi_healthcare_speciality_herbalism">Herbalism</string>
+    <string name="poi_healthcare_speciality_chiropractic">Kiropraktika</string>
+    <string name="poi_healthcare_speciality_naturopathy">Loodusravi</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Süvapsühholoogia</string>
+    <string name="poi_healthcare_speciality_behavior">Käitumine</string>
     <string name="poi_building_type_pyramid">Ehitise liik: püramiid</string>
     <string name="poi_fitness_centre">Spordikeskus</string>
     <string name="poi_fitness">Fitness</string>
@@ -2610,7 +2610,7 @@
     <string name="poi_health_facility_type_first_aid">Terviserajatise liik: esmaabi</string>
     <string name="poi_health_facility_type_nursing_home">Terviserajatise liik: hooldekodu</string>
     <string name="poi_health_facility_type_support_group_home">Terviserajatise liik: tugigrupi kodu</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Palliatiivne meditsiin</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Palliatiivne meditsiin</string>
     <string name="poi_suction_point">Imemispunkt</string>
     <string name="poi_fire_hydrant_type_underground">Maa-alune</string>
     <string name="poi_fire_hydrant_type_pillar">Sammas</string>
@@ -3565,7 +3565,7 @@
     <string name="poi_rtsa_scale_3b_asterisk">3B*</string>
     <string name="poi_flare">Gaasi põletamine;Hõõglamp</string>
     <string name="poi_change_delete">Kustutatud objekt</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Kiiritusravi</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Kiiritusravi</string>
     <string name="poi_rescue_box">Päästekast</string>
     <string name="reddit">Reddit</string>
     <string name="poi_hazard_additional_erosion">Oht: erosioon</string>
@@ -3834,7 +3834,7 @@
     <string name="poi_siren">Sireen</string>
     <string name="poi_lifeguard_base">Vetelpäästejaam</string>
     <string name="poi_nurse">Õde</string>
-    <string name="poi_health_specialty_vaccination_yes">Vaktsineerimine</string>
+    <string name="poi_healthcare_speciality_vaccination">Vaktsineerimine</string>
     <string name="poi_vaccination_covid19">Vaktsineerimine: COVID19</string>
     <string name="poi_water_source_tube_well">Puurkaev</string>
     <string name="poi_water_source_water_works">Veevärgi ettevõte</string>
