--- a/OsmAnd/res/values-eu/phrases.xml
+++ b/OsmAnd/res/values-eu/phrases.xml
@@ -1465,7 +1465,7 @@
     <string name="poi_piste_grooming">Pistaren prestaketa</string>
     <string name="poi_drive_in">Autoz sartu</string>
     <string name="poi_diet">Dieta</string>
-    <string name="poi_health_specialty">Osasun espezialitatea</string>
+    <string name="poi_healthcare_speciality">Osasun espezialitatea</string>
     <string name="poi_massage_type">Masaje mota</string>
     <string name="poi_tents">Dendak</string>
     <string name="poi_washing_machine">Garbigailua</string>
@@ -1568,57 +1568,57 @@
     <string name="poi_craft_optician">Optikoa</string>
     <string name="poi_craft_parquet_layer">Parquet instalatzailea</string>
     <string name="poi_craft_pottery">Eltzeria</string>
-    <string name="poi_health_specialty_dermatology_yes">Dermatologia</string>
-    <string name="poi_health_specialty_urology_yes">Urologia</string>
-    <string name="poi_health_specialty_surgery_yes">Kirugia orokorra</string>
-    <string name="poi_health_specialty_radiology_yes">Erradiologia</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psikiatria</string>
-    <string name="poi_health_specialty_neurology_yes">Neurologia</string>
-    <string name="poi_health_specialty_cardiology_yes">Kardiologia</string>
-    <string name="poi_health_specialty_trauma_yes">Traumatologia</string>
-    <string name="poi_health_specialty_biology_yes">Biologia klinikoa</string>
-    <string name="poi_health_specialty_osteopathy_yes">Osteopatia</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Anestesikoak</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Hortz-kirurkia, aho-kirurgia, eta kirurgia maxilo-faziala</string>
-    <string name="poi_health_specialty_emergency_yes">Istripu eta larrialdietarako medikuntza</string>
+    <string name="poi_healthcare_speciality_dermatology">Dermatologia</string>
+    <string name="poi_healthcare_speciality_urology">Urologia</string>
+    <string name="poi_healthcare_speciality_surgery">Kirugia orokorra</string>
+    <string name="poi_healthcare_speciality_radiology">Erradiologia</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psikiatria</string>
+    <string name="poi_healthcare_speciality_neurology">Neurologia</string>
+    <string name="poi_healthcare_speciality_cardiology">Kardiologia</string>
+    <string name="poi_healthcare_speciality_trauma">Traumatologia</string>
+    <string name="poi_healthcare_speciality_biology">Biologia klinikoa</string>
+    <string name="poi_healthcare_speciality_osteopathy">Osteopatia</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Anestesikoak</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Hortz-kirurkia, aho-kirurgia, eta kirurgia maxilo-faziala</string>
+    <string name="poi_healthcare_speciality_emergency">Istripu eta larrialdietarako medikuntza</string>
     <string name="poi_health_specialty_emergency_medicine_no">Osasun espezialitatea: istripu eta larrialdietarako medikuntza: ez</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Kirurgia plastikoa</string>
-    <string name="poi_health_specialty_orthodontics_yes">Ortodontzia</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Fisioterapia</string>
-    <string name="poi_health_specialty_biochemistry_yes">Biokimika</string>
-    <string name="poi_health_specialty_occupational_yes">Terapia okupazionala</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Haur psikiatria</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Kirurgia maxilo-faziala</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gastroenterología</string>
-    <string name="poi_health_specialty_stomatology_yes">Dentista</string>
-    <string name="poi_health_specialty_nephrology_yes">Nefrologia (giltzurrunetako gaixotasunak)</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Kirurgia neurologikoa</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Neuropsikiatria</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endokrinologia</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Medikuntza nuklearra</string>
-    <string name="poi_health_specialty_pathology_yes">Anatomia patologikoa</string>
-    <string name="poi_health_specialty_oncology_yes">Onkologia</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Medikuntza tropikala</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Kirurgia plastikoa</string>
+    <string name="poi_healthcare_speciality_orthodontics">Ortodontzia</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Fisioterapia</string>
+    <string name="poi_healthcare_speciality_biochemistry">Biokimika</string>
+    <string name="poi_healthcare_speciality_occupational">Terapia okupazionala</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Haur psikiatria</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Kirurgia maxilo-faziala</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gastroenterología</string>
+    <string name="poi_healthcare_speciality_stomatology">Dentista</string>
+    <string name="poi_healthcare_speciality_nephrology">Nefrologia (giltzurrunetako gaixotasunak)</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Kirurgia neurologikoa</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Neuropsikiatria</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endokrinologia</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Medikuntza nuklearra</string>
+    <string name="poi_healthcare_speciality_pathology">Anatomia patologikoa</string>
+    <string name="poi_healthcare_speciality_oncology">Onkologia</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Medikuntza tropikala</string>
     <string name="poi_health_specialty_tropical_medicine_no">Osasun espezialitatea: medikuntza tropikala: ez</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">Obstetrizia (jaiotza ostekoa)</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">Obstetrizia (jaiotza ostekoa)</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">Osasun espezialitatea: obstetrizia (jaiotza ostekoa): ez</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Obstetrizia (jaiotza aurrekoa)</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Obstetrizia (jaiotza aurrekoa)</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Osasun espezialitatea: obstetrizia (jaiotza aurrekoa): ez</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Obstetrizia (Zesarea)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Obstetrizia (Zesarea)</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Osasun espezialitatea: Obstetrizia (Zesarea): ez</string>
-    <string name="poi_health_specialty_optometry_yes">Optometria</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Patologia klinikoa</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Esku terapia</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Kirol medikuntza</string>
-    <string name="poi_health_specialty_podiatry_yes">Podologia</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Helduen psikiatria</string>
-    <string name="poi_health_specialty_acupuncture_yes">Akupuntura</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homeopatia</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Medikuntza txinatar tradizionala</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
-    <string name="poi_health_specialty_chiropractic_yes">Kiropraktikoa</string>
-    <string name="poi_health_specialty_naturopathy_yes">Naturopata</string>
-    <string name="poi_health_specialty_behavior_yes">Portaera</string>
+    <string name="poi_healthcare_speciality_optometry">Optometria</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Patologia klinikoa</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Esku terapia</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Kirol medikuntza</string>
+    <string name="poi_healthcare_speciality_podiatry">Podologia</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Helduen psikiatria</string>
+    <string name="poi_healthcare_speciality_acupuncture">Akupuntura</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homeopatia</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Medikuntza txinatar tradizionala</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
+    <string name="poi_healthcare_speciality_chiropractic">Kiropraktikoa</string>
+    <string name="poi_healthcare_speciality_naturopathy">Naturopata</string>
+    <string name="poi_healthcare_speciality_behavior">Portaera</string>
     <string name="poi_billiards">Bilara</string>
     <string name="poi_microwave_oven_yes">Mikrouhin labea: bai</string>
     <string name="poi_microwave_oven_no">Mikrouhin labea: ez</string>
@@ -2113,15 +2113,15 @@
     <string name="poi_agrarian">Nekazaritza denda</string>
     <string name="poi_wiki_lang_als">Wikia alsatieraz</string>
     <string name="poi_memorial_koshinto">Koshinto</string>
-    <string name="poi_health_specialty_pulmonology_yes">Pneumologia</string>
-    <string name="poi_health_specialty_maternity_yes">Amatasuna</string>
-    <string name="poi_health_specialty_physiatry_yes">Fisioterapia eta errehabilitazioa</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Diagnostikorako erradiologia</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Soziologia pediatrikoa</string>
+    <string name="poi_healthcare_speciality_pulmonology">Pneumologia</string>
+    <string name="poi_healthcare_speciality_maternity">Amatasuna</string>
+    <string name="poi_healthcare_speciality_physiatry">Fisioterapia eta errehabilitazioa</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Diagnostikorako erradiologia</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Soziologia pediatrikoa</string>
     <string name="poi_health_specialty_social_paediatrics_no">Osasun espezialitatea: soziologia pediatrikoa: ez</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">"Adikzioen medikuntza "</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Hizketaren terapia</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Psikoanalisia</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">"Adikzioen medikuntza "</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Hizketaren terapia</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Psikoanalisia</string>
     <string name="poi_aquaculture_shrimp">Akuikultura: ganbak</string>
     <string name="poi_water_supply_type">Ur hornidura mota</string>
     <string name="poi_water_place_access">Ur iturrira sarbidea</string>
@@ -2709,13 +2709,13 @@
     <string name="poi_craft_electronics_repair">Konponketa elektronikoak</string>
     <string name="poi_fireworks">Su artifizialen denda</string>
     <string name="poi_aerialway_length">Luzera</string>
-    <string name="poi_health_specialty_general_yes">Mediku orokorra</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Oftalmologia</string>
-    <string name="poi_health_specialty_gynaecology_yes">Ginekologia</string>
-    <string name="poi_health_specialty_internal_yes">Barne medikuntza</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ortopedia</string>
-    <string name="poi_health_specialty_otolaryngology_yes">"Otorrinolaringologia "</string>
-    <string name="poi_health_specialty_paediatrics_yes">Pediatria</string>
+    <string name="poi_healthcare_speciality_general">Mediku orokorra</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Oftalmologia</string>
+    <string name="poi_healthcare_speciality_gynaecology">Ginekologia</string>
+    <string name="poi_healthcare_speciality_internal">Barne medikuntza</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ortopedia</string>
+    <string name="poi_healthcare_speciality_otolaryngology">"Otorrinolaringologia "</string>
+    <string name="poi_healthcare_speciality_paediatrics">Pediatria</string>
     <string name="poi_health_specialty_paediatrics_no">Osasun espezialitatea: pediatria: ez</string>
     <string name="poi_fair_trade_yes">Bidezko merkataritza: bai</string>
     <string name="poi_fair_trade_no">Bidezko merkataritza: ez</string>
@@ -3033,8 +3033,8 @@
     <string name="poi_bridge_ref">Zubi-erreferentzia</string>
     <string name="poi_tunnel_ref">Tunel-erreferentzia</string>
     <string name="poi_ref">Erreferentzia</string>
-    <string name="poi_health_specialty_herbalism_yes">Sendabelarrak</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Medikuntza paliatiboa</string>
+    <string name="poi_healthcare_speciality_herbalism">Sendabelarrak</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Medikuntza paliatiboa</string>
     <string name="poi_fitness_centre">Gimnasioa</string>
     <string name="poi_fitness">Gimnasia</string>
     <string name="poi_boxing">Boxeoa</string>
@@ -3389,7 +3389,7 @@
     <string name="poi_concentration_camp">Mota: Kontzentrazio-esparrua</string>
     <string name="poi_pow_camp">Mota: Gerrako presoentzako esparrua</string>
     <string name="poi_labor_camp">Mota: Lan esparrua</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Dermatologia eta benereologia</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Dermatologia eta benereologia</string>
     <string name="poi_netball">Netball</string>
     <string name="poi_disc_golf">Disc golf</string>
     <string name="poi_rc_car">Irrati-kontroleko kotxeen lasterketa</string>
@@ -3545,7 +3545,7 @@
     <string name="poi_rtsa_scale_3b">3B</string>
     <string name="poi_rtsa_scale_3b_asterisk">3B*</string>
     <string name="poi_change_delete">Ezabatutako objektua</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Erradioterapia</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Erradioterapia</string>
     <string name="poi_climbing_crag">Bai</string>
     <string name="reddit">Reddit</string>
     <string name="poi_hazard_additional_erosion">Arriskua: higadura</string>
