--- a/OsmAnd/res/values-fi/phrases.xml
+++ b/OsmAnd/res/values-fi/phrases.xml
@@ -783,19 +783,19 @@
     <string name="poi_tourism_yes">Turistikohde</string>
     <string name="poi_bathing_yes">Kylpeminen: kyllä</string>
     <string name="poi_pump_yes">Kyllä</string>
-    <string name="poi_health_specialty_gynaecology_yes">Gynekologia</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ortopedia</string>
-    <string name="poi_health_specialty_urology_yes">Urologia</string>
-    <string name="poi_health_specialty_radiology_yes">Radiologia</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psykiatria</string>
-    <string name="poi_health_specialty_neurology_yes">Neurologia</string>
-    <string name="poi_health_specialty_maternity_yes">Äitiys</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Plastiikkakirurgia</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Fysioterapia</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Puheterapia</string>
-    <string name="poi_health_specialty_acupuncture_yes">Akupunktio</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homeopatia</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
+    <string name="poi_healthcare_speciality_gynaecology">Gynekologia</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ortopedia</string>
+    <string name="poi_healthcare_speciality_urology">Urologia</string>
+    <string name="poi_healthcare_speciality_radiology">Radiologia</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psykiatria</string>
+    <string name="poi_healthcare_speciality_neurology">Neurologia</string>
+    <string name="poi_healthcare_speciality_maternity">Äitiys</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Plastiikkakirurgia</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Fysioterapia</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Puheterapia</string>
+    <string name="poi_healthcare_speciality_acupuncture">Akupunktio</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homeopatia</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
     <string name="poi_microwave_oven_yes">Mikroaaltouuni: kyllä</string>
     <string name="poi_water_heater_yes">Veden lämmitin: kyllä</string>
     <string name="poi_fair_trade_yes">Reilu kauppa: kyllä</string>
@@ -1379,7 +1379,7 @@
     <string name="poi_memorial_fassade_decoration">Julkisivun koristelu</string>
     <string name="poi_internet_access_type_yes">Internet-yhteys</string>
     <string name="poi_diaper_table_count">Vauvan vaihtopöytien määrä</string>
-    <string name="poi_health_specialty">Terveydenhuollon erikoisuus</string>
+    <string name="poi_healthcare_speciality">Terveydenhuollon erikoisuus</string>
     <string name="poi_diet_vegetarian_filter_yes">Kasvisruoka</string>
     <string name="poi_diet_vegetarian_few">Kasvisruokavaihtoehtoja</string>
     <string name="poi_depot">Varikko</string>
