--- a/OsmAnd/res/values-hu/phrases.xml
+++ b/OsmAnd/res/values-hu/phrases.xml
@@ -1764,7 +1764,7 @@
     <string name="poi_cuisine_american">Amerikai</string>
     <string name="poi_cuisine_asian">Ázsiai</string>
     <string name="poi_massage_chinese">Kínai</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Hagyományos kínai orvoslás</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Hagyományos kínai orvoslás</string>
     <string name="poi_medical_system_chinese_yes">Hagyományos kínai</string>
     <string name="poi_cuisine_chinese">Kínai</string>
     <string name="poi_cuisine_german">Német</string>
@@ -2268,7 +2268,7 @@
     <string name="poi_social_facility_day_care">Napközi ellátás</string>
     <string name="poi_social_facility_for_mental_health">Értelmi fogyatékos betegek</string>
     <string name="poi_social_facility_for_migrant">Bevándorlók</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Szociális gyermekgyógyászat</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Szociális gyermekgyógyászat</string>
     <string name="poi_scout_yes">van;cserkésztáborhely</string>
     <string name="poi_scout_no">Cserkésztáborhely nincs</string>
     <string name="poi_cuisine_steak">Steak (marhaszelet)</string>
@@ -2425,42 +2425,42 @@
     <string name="poi_fitness_station">Fitneszpark</string>
     <string name="poi_fireworks">Tűzijátékbolt</string>
     <string name="poi_aerialway_length">Hossz</string>
-    <string name="poi_health_specialty_general_yes">Háziorvos</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Szemészet</string>
-    <string name="poi_health_specialty_gynaecology_yes">Nőgyógyászat</string>
-    <string name="poi_health_specialty_internal_yes">Belgyógyászat</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ortopédia</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Fül-orr-gégészet</string>
-    <string name="poi_health_specialty_paediatrics_yes">Gyermekgyógyászat</string>
-    <string name="poi_health_specialty_dermatology_yes">Bőrgyógyászat</string>
-    <string name="poi_health_specialty_urology_yes">Urológia</string>
-    <string name="poi_health_specialty_surgery_yes">Általános sebészet</string>
-    <string name="poi_health_specialty_radiology_yes">Radiológia</string>
-    <string name="poi_health_specialty_psychiatry_yes">Pszichiátria</string>
-    <string name="poi_health_specialty_neurology_yes">Neurológia</string>
-    <string name="poi_health_specialty_cardiology_yes">Kardiológia</string>
-    <string name="poi_health_specialty_trauma_yes">Baleseti sebészet</string>
-    <string name="poi_health_specialty_biology_yes">Klinikai biológia</string>
-    <string name="poi_health_specialty_osteopathy_yes">Csontkovácsolás</string>
-    <string name="poi_health_specialty_maternity_yes">Szülészet</string>
-    <string name="poi_health_specialty_emergency_yes">Baleseti és sürgősségi ellátás</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Plasztikai sebészet</string>
-    <string name="poi_health_specialty_orthodontics_yes">Fogszabályozás</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Gyógytorna</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Gyermekpszichiátria</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Diagnosztikai radiológia</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gasztroenterológia</string>
-    <string name="poi_health_specialty_stomatology_yes">Fogászat</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Idegsebészet</string>
-    <string name="poi_health_specialty_pathology_yes">Patológia</string>
-    <string name="poi_health_specialty_oncology_yes">Onkológia</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Szülészet (császármetszés)</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Klinikai patológia</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Logopédia</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Sportorvoslás</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Felnőttpszichiátria</string>
-    <string name="poi_health_specialty_acupuncture_yes">Akupunktúra</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homeopátia</string>
+    <string name="poi_healthcare_speciality_general">Háziorvos</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Szemészet</string>
+    <string name="poi_healthcare_speciality_gynaecology">Nőgyógyászat</string>
+    <string name="poi_healthcare_speciality_internal">Belgyógyászat</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ortopédia</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Fül-orr-gégészet</string>
+    <string name="poi_healthcare_speciality_paediatrics">Gyermekgyógyászat</string>
+    <string name="poi_healthcare_speciality_dermatology">Bőrgyógyászat</string>
+    <string name="poi_healthcare_speciality_urology">Urológia</string>
+    <string name="poi_healthcare_speciality_surgery">Általános sebészet</string>
+    <string name="poi_healthcare_speciality_radiology">Radiológia</string>
+    <string name="poi_healthcare_speciality_psychiatry">Pszichiátria</string>
+    <string name="poi_healthcare_speciality_neurology">Neurológia</string>
+    <string name="poi_healthcare_speciality_cardiology">Kardiológia</string>
+    <string name="poi_healthcare_speciality_trauma">Baleseti sebészet</string>
+    <string name="poi_healthcare_speciality_biology">Klinikai biológia</string>
+    <string name="poi_healthcare_speciality_osteopathy">Csontkovácsolás</string>
+    <string name="poi_healthcare_speciality_maternity">Szülészet</string>
+    <string name="poi_healthcare_speciality_emergency">Baleseti és sürgősségi ellátás</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Plasztikai sebészet</string>
+    <string name="poi_healthcare_speciality_orthodontics">Fogszabályozás</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Gyógytorna</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Gyermekpszichiátria</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Diagnosztikai radiológia</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gasztroenterológia</string>
+    <string name="poi_healthcare_speciality_stomatology">Fogászat</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Idegsebészet</string>
+    <string name="poi_healthcare_speciality_pathology">Patológia</string>
+    <string name="poi_healthcare_speciality_oncology">Onkológia</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Szülészet (császármetszés)</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Klinikai patológia</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Logopédia</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Sportorvoslás</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Felnőttpszichiátria</string>
+    <string name="poi_healthcare_speciality_acupuncture">Akupunktúra</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homeopátia</string>
     <string name="poi_building_type_pyramid">Épülettípus: piramis</string>
     <string name="poi_fitness">Fitnesz</string>
     <string name="poi_billiards">Biliárd</string>
@@ -2636,40 +2636,40 @@
     <string name="poi_locomotive">Mozdony</string>
     <string name="poi_nutrition_supplements">Táplálékkiegészítők</string>
     <string name="poi_photo_studio">Fotóstúdió</string>
-    <string name="poi_health_specialty">Szakorvosi ellátás</string>
+    <string name="poi_healthcare_speciality">Szakorvosi ellátás</string>
     <string name="poi_health_specialty_paediatrics_no">Gyermekgyógyászat nincs</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Bőr- és nemibeteg-ellátás</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Aneszteziológia</string>
-    <string name="poi_health_specialty_pulmonology_yes">Tüdőgyógyászat</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Fog-, száj, állcsont- és arcsebészet</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Bőr- és nemibeteg-ellátás</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Aneszteziológia</string>
+    <string name="poi_healthcare_speciality_pulmonology">Tüdőgyógyászat</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Fog-, száj, állcsont- és arcsebészet</string>
     <string name="poi_health_specialty_emergency_medicine_no">Baleseti és sürgősségi ellátás nincs</string>
-    <string name="poi_health_specialty_biochemistry_yes">Biológiai kémia</string>
-    <string name="poi_health_specialty_occupational_yes">Foglalkozás-egészségügyi ellátás</string>
-    <string name="poi_health_specialty_physiatry_yes">Fizikális medicina és rehabilitáció</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Állcsont- és arcsebészet</string>
-    <string name="poi_health_specialty_nephrology_yes">Nefrológia (vesegyógyászat)</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Neuropszichiátria</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endokrinológia</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Nukleáris medicina</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Trópusibetegség-ellátás</string>
+    <string name="poi_healthcare_speciality_biochemistry">Biológiai kémia</string>
+    <string name="poi_healthcare_speciality_occupational">Foglalkozás-egészségügyi ellátás</string>
+    <string name="poi_healthcare_speciality_physiatry">Fizikális medicina és rehabilitáció</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Állcsont- és arcsebészet</string>
+    <string name="poi_healthcare_speciality_nephrology">Nefrológia (vesegyógyászat)</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Neuropszichiátria</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endokrinológia</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Nukleáris medicina</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Trópusibetegség-ellátás</string>
     <string name="poi_health_specialty_tropical_medicine_no">Trópusibetegség-ellátás nincs</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">(Szülés utáni) szülészeti ellátás</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">(Szülés utáni) szülészeti ellátás</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">(Szülés utáni) szülészeti ellátás nincs</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Várandósgondozás</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Várandósgondozás</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Várandósgondozás nincs</string>
     <string name="poi_health_specialty_social_paediatrics_no">Szociális gyermekgyógyászat nincs</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Szülészet (császármetszés) nincs</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">Addiktológia</string>
-    <string name="poi_health_specialty_optometry_yes">Optometria</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Manuálterápia</string>
-    <string name="poi_health_specialty_podiatry_yes">Lábgyógyászat</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
-    <string name="poi_health_specialty_herbalism_yes">Gyógynövénytan</string>
-    <string name="poi_health_specialty_chiropractic_yes">Chiropraktika</string>
-    <string name="poi_health_specialty_naturopathy_yes">Naturopátia</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Mélylélektan</string>
-    <string name="poi_health_specialty_behavior_yes">Viselkedés-lélektan</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Palliatív gyógyászat</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">Addiktológia</string>
+    <string name="poi_healthcare_speciality_optometry">Optometria</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Manuálterápia</string>
+    <string name="poi_healthcare_speciality_podiatry">Lábgyógyászat</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
+    <string name="poi_healthcare_speciality_herbalism">Gyógynövénytan</string>
+    <string name="poi_healthcare_speciality_chiropractic">Chiropraktika</string>
+    <string name="poi_healthcare_speciality_naturopathy">Naturopátia</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Mélylélektan</string>
+    <string name="poi_healthcare_speciality_behavior">Viselkedés-lélektan</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Palliatív gyógyászat</string>
     <string name="poi_health_service_nursing_yes">Egészségügyi szolgáltatás: ápolás</string>
     <string name="poi_health_service_nursing_no">Egészségügyi szolgáltatás: ápolás nincs</string>
     <string name="poi_health_service_counselling_yes">Egészségügyi szolgáltatás: tanácsadás</string>
@@ -3547,7 +3547,7 @@
     <string name="poi_rtsa_scale_3b_asterisk">3B*</string>
     <string name="poi_flare">Gázfáklya</string>
     <string name="poi_change_delete">Törölt objektum</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Sugárkezelés</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Sugárkezelés</string>
     <string name="poi_substation_inspection_gauge">Ellenőrző mérőműszer</string>
     <string name="poi_substation_field_gathering">Kutakból jövő anyag gyűjtőhelye</string>
     <string name="poi_climbing_crag_filter">Mászószikla</string>
@@ -3855,7 +3855,7 @@
     <string name="poi_mobile_money_agent">Mobilpénzfizetési iroda</string>
     <string name="poi_lifeguard_base">Vízimentő-támaszpont</string>
     <string name="poi_vaccination_covid19">Oltóközpont: Covid19</string>
-    <string name="poi_health_specialty_vaccination_yes">Oltóközpont</string>
+    <string name="poi_healthcare_speciality_vaccination">Oltóközpont</string>
     <string name="poi_ranger_station">Ranger station</string>
     <string name="poi_lavoir">Ruhamosó hely</string>
     <string name="poi_waste_transfer_station">Hulladékátrakodó</string>
