--- a/OsmAnd/res/values-iw/phrases.xml
+++ b/OsmAnd/res/values-iw/phrases.xml
@@ -300,7 +300,7 @@
     <string name="poi_water_characteristic">הרכב המים</string>
     <string name="poi_nudism">נודיזם</string>
     <string name="poi_diet">תזונה</string>
-    <string name="poi_health_specialty">מומחיות בבריאות</string>
+    <string name="poi_healthcare_speciality">מומחיות בבריאות</string>
     <string name="poi_massage_type">סוג העיסוי</string>
     <string name="poi_tents">אוהלים</string>
     <string name="poi_washing_machine">מכונת כביסה</string>
@@ -1630,35 +1630,35 @@
     <string name="poi_craft_electronics_repair">תיקון אלקטרוניקה</string>
     <string name="poi_fireworks">חנות זיקוקים</string>
     <string name="poi_aerialway_length">אורך</string>
-    <string name="poi_health_specialty_general_yes">רפואה כללית</string>
-    <string name="poi_health_specialty_ophthalmology_yes">רפואת עיניים</string>
-    <string name="poi_health_specialty_gynaecology_yes">רפואת נשים</string>
-    <string name="poi_health_specialty_internal_yes">רפואה פנימית</string>
-    <string name="poi_health_specialty_orthopaedics_yes">אורתופדיה</string>
-    <string name="poi_health_specialty_otolaryngology_yes">אף אוזן גרון</string>
-    <string name="poi_health_specialty_paediatrics_yes">רפואת ילדים</string>
+    <string name="poi_healthcare_speciality_general">רפואה כללית</string>
+    <string name="poi_healthcare_speciality_ophthalmology">רפואת עיניים</string>
+    <string name="poi_healthcare_speciality_gynaecology">רפואת נשים</string>
+    <string name="poi_healthcare_speciality_internal">רפואה פנימית</string>
+    <string name="poi_healthcare_speciality_orthopaedics">אורתופדיה</string>
+    <string name="poi_healthcare_speciality_otolaryngology">אף אוזן גרון</string>
+    <string name="poi_healthcare_speciality_paediatrics">רפואת ילדים</string>
     <string name="poi_health_specialty_paediatrics_no">התמחות רפואית: ילדים: לא</string>
-    <string name="poi_health_specialty_dermatology_yes">רפואת עור</string>
-    <string name="poi_health_specialty_urology_yes">אורולוגיה</string>
-    <string name="poi_health_specialty_surgery_yes">ניתוח כללי</string>
-    <string name="poi_health_specialty_radiology_yes">רדיולוגיה</string>
-    <string name="poi_health_specialty_psychiatry_yes">בריאות הנפש</string>
-    <string name="poi_health_specialty_neurology_yes">ניורולוגיה</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">רפואת מין</string>
-    <string name="poi_health_specialty_cardiology_yes">קרדיולוגיה</string>
-    <string name="poi_health_specialty_trauma_yes">טראומטולוגיה</string>
-    <string name="poi_health_specialty_osteopathy_yes">אוסטאופתיה</string>
-    <string name="poi_health_specialty_anaesthetics_yes">תרופות הרדמה</string>
-    <string name="poi_health_specialty_pulmonology_yes">רפואת דרכי הנשימה</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">כירורגיית פה, לסת ושיניים</string>
-    <string name="poi_health_specialty_emergency_yes">רפואת חירום</string>
+    <string name="poi_healthcare_speciality_dermatology">רפואת עור</string>
+    <string name="poi_healthcare_speciality_urology">אורולוגיה</string>
+    <string name="poi_healthcare_speciality_surgery">ניתוח כללי</string>
+    <string name="poi_healthcare_speciality_radiology">רדיולוגיה</string>
+    <string name="poi_healthcare_speciality_psychiatry">בריאות הנפש</string>
+    <string name="poi_healthcare_speciality_neurology">ניורולוגיה</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">רפואת מין</string>
+    <string name="poi_healthcare_speciality_cardiology">קרדיולוגיה</string>
+    <string name="poi_healthcare_speciality_trauma">טראומטולוגיה</string>
+    <string name="poi_healthcare_speciality_osteopathy">אוסטאופתיה</string>
+    <string name="poi_healthcare_speciality_anaesthetics">תרופות הרדמה</string>
+    <string name="poi_healthcare_speciality_pulmonology">רפואת דרכי הנשימה</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">כירורגיית פה, לסת ושיניים</string>
+    <string name="poi_healthcare_speciality_emergency">רפואת חירום</string>
     <string name="poi_health_specialty_emergency_medicine_no">התמחות רפואית: רפואת חירום: לא</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">נתיחה פלסטית</string>
-    <string name="poi_health_specialty_orthodontics_yes">אורתודנטיה</string>
-    <string name="poi_health_specialty_physiotherapy_yes">פיזיותרפיה</string>
-    <string name="poi_health_specialty_biochemistry_yes">ביוכימיה</string>
-    <string name="poi_health_specialty_occupational_yes">ריפוי בעיסוק</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">פסיכיאטריית ילדים</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">נתיחה פלסטית</string>
+    <string name="poi_healthcare_speciality_orthodontics">אורתודנטיה</string>
+    <string name="poi_healthcare_speciality_physiotherapy">פיזיותרפיה</string>
+    <string name="poi_healthcare_speciality_biochemistry">ביוכימיה</string>
+    <string name="poi_healthcare_speciality_occupational">ריפוי בעיסוק</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">פסיכיאטריית ילדים</string>
     <string name="poi_hazard_nuclear">סכנה גרעינית</string>
     <string name="poi_hazard_erosion">סכנת סחף</string>
     <string name="poi_hazard_avalanche">סכנת מפולת שלגים</string>
