--- a/OsmAnd/res/values-lt/phrases.xml
+++ b/OsmAnd/res/values-lt/phrases.xml
@@ -349,7 +349,7 @@
     <string name="poi_estate_agent">Nekilnojamo turto agentūra</string>
     <string name="poi_ngo">Visuomeninė organizacija</string>
     <string name="poi_diet">Dieta</string>
-    <string name="poi_health_specialty">Medicininė specializacija</string>
+    <string name="poi_healthcare_speciality">Medicininė specializacija</string>
     <string name="poi_tents">Palapinės</string>
     <string name="poi_caravans">Automobilių priekabos</string>
     <string name="poi_power_supply">Elektros energijos šaltinis</string>
@@ -816,36 +816,36 @@
     <string name="poi_vacuum_cleaner_yes">Taip</string>
     <string name="poi_car_wash_yes">Taip</string>
     <string name="poi_compressed_air_yes">Taip</string>
-    <string name="poi_health_specialty_behavior_yes">Elgsenos terapija</string>
-    <string name="poi_health_specialty_naturopathy_yes">Natūropatija</string>
-    <string name="poi_health_specialty_chiropractic_yes">Chiropraktika</string>
-    <string name="poi_health_specialty_herbalism_yes">Vaistažolininkystė</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homeopatija</string>
-    <string name="poi_health_specialty_acupuncture_yes">Akupunktūra</string>
-    <string name="poi_health_specialty_podiatry_yes">Podologija</string>
-    <string name="poi_health_specialty_optometry_yes">Optometrija</string>
-    <string name="poi_health_specialty_oncology_yes">Onkologija</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endokrinologija</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Neuropsichiatrija</string>
-    <string name="poi_health_specialty_stomatology_yes">Odontologija</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gastroenterologija</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Fizioterapija</string>
-    <string name="poi_health_specialty_orthodontics_yes">Ortodontija</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Anesteziologija</string>
-    <string name="poi_health_specialty_osteopathy_yes">Osteopatija</string>
-    <string name="poi_health_specialty_trauma_yes">Traumatologija</string>
-    <string name="poi_health_specialty_cardiology_yes">Kardiologija</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Dermatovenerologija</string>
-    <string name="poi_health_specialty_neurology_yes">Neurologija</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psichiatrija</string>
-    <string name="poi_health_specialty_radiology_yes">Radiologija</string>
-    <string name="poi_health_specialty_urology_yes">Urologija</string>
-    <string name="poi_health_specialty_dermatology_yes">Dermatologija</string>
-    <string name="poi_health_specialty_paediatrics_yes">Pediatrija</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Otolaringologija</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ortopedija</string>
-    <string name="poi_health_specialty_gynaecology_yes">Ginekologija</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Oftalmologija</string>
+    <string name="poi_healthcare_speciality_behavior">Elgsenos terapija</string>
+    <string name="poi_healthcare_speciality_naturopathy">Natūropatija</string>
+    <string name="poi_healthcare_speciality_chiropractic">Chiropraktika</string>
+    <string name="poi_healthcare_speciality_herbalism">Vaistažolininkystė</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homeopatija</string>
+    <string name="poi_healthcare_speciality_acupuncture">Akupunktūra</string>
+    <string name="poi_healthcare_speciality_podiatry">Podologija</string>
+    <string name="poi_healthcare_speciality_optometry">Optometrija</string>
+    <string name="poi_healthcare_speciality_oncology">Onkologija</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endokrinologija</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Neuropsichiatrija</string>
+    <string name="poi_healthcare_speciality_stomatology">Odontologija</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gastroenterologija</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Fizioterapija</string>
+    <string name="poi_healthcare_speciality_orthodontics">Ortodontija</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Anesteziologija</string>
+    <string name="poi_healthcare_speciality_osteopathy">Osteopatija</string>
+    <string name="poi_healthcare_speciality_trauma">Traumatologija</string>
+    <string name="poi_healthcare_speciality_cardiology">Kardiologija</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Dermatovenerologija</string>
+    <string name="poi_healthcare_speciality_neurology">Neurologija</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psichiatrija</string>
+    <string name="poi_healthcare_speciality_radiology">Radiologija</string>
+    <string name="poi_healthcare_speciality_urology">Urologija</string>
+    <string name="poi_healthcare_speciality_dermatology">Dermatologija</string>
+    <string name="poi_healthcare_speciality_paediatrics">Pediatrija</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Otolaringologija</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ortopedija</string>
+    <string name="poi_healthcare_speciality_gynaecology">Ginekologija</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Oftalmologija</string>
     <string name="poi_power_supply_yes">Taip</string>
     <string name="poi_caravans_yes">Taip</string>
     <string name="poi_washing_machine_yes">Taip</string>
@@ -978,7 +978,7 @@
     <string name="poi_nurse">Slaugytoja</string>
     <string name="poi_siren">Sirena</string>
     <string name="poi_lifeguard_base">Gelbėtojų bazė</string>
-    <string name="poi_health_specialty_vaccination_yes">Vakcinacija</string>
+    <string name="poi_healthcare_speciality_vaccination">Vakcinacija</string>
     <string name="poi_vaccination_covid19">Vakcinacija: COVID19</string>
     <string name="poi_water_source_tap">Čiaupas</string>
     <string name="poi_water_source_water_tank">Vandens rezervuaras</string>
@@ -1496,7 +1496,7 @@
     <string name="poi_sms_yes">Taip</string>
     <string name="poi_bath_open_air_yes">Taip</string>
     <string name="poi_motorcar_yes">Taip</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Radioterapija</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Radioterapija</string>
     <string name="poi_park_ride_yes">Taip;Pasivažinėjimas parke</string>
     <string name="poi_bulk_purchase_yes">Taip;Didmeninis pirkimas</string>
     <string name="poi_hgv_yes">Taip</string>
