--- a/OsmAnd/res/values-mk/phrases.xml
+++ b/OsmAnd/res/values-mk/phrases.xml
@@ -57,7 +57,7 @@
     <string name="poi_beach_surface_type">Povrsina</string>
     <string name="poi_nudism">Nudizam</string>
     <string name="poi_diet">Dieta</string>
-    <string name="poi_health_specialty">Zdravstvena specijalnost</string>
+    <string name="poi_healthcare_speciality">Zdravstvena specijalnost</string>
     <string name="poi_massage_type">Tip na poraka</string>
     <string name="poi_tents">Satori</string>
     <string name="poi_washing_machine">Masina za perenje</string>
