--- a/OsmAnd/res/values-nl/phrases.xml
+++ b/OsmAnd/res/values-nl/phrases.xml
@@ -1439,7 +1439,7 @@
     <string name="poi_beach_surface_type">Oppervlak</string>
     <string name="poi_nudism">Nudisme</string>
     <string name="poi_diet">Dieet</string>
-    <string name="poi_health_specialty">Specialiteit gezondheid</string>
+    <string name="poi_healthcare_speciality">Specialiteit gezondheid</string>
     <string name="poi_massage_type">Soort massage</string>
     <string name="poi_tents">Tenten</string>
     <string name="poi_washing_machine">Wasmachine</string>
@@ -2133,46 +2133,46 @@
     <string name="poi_craft_electronics_repair">Elektronica-reparatie</string>
     <string name="poi_fireworks">Vuurwerk winkel</string>
     <string name="poi_aerialway_length">Lengte</string>
-    <string name="poi_health_specialty_general_yes">Huisarts</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Oogheelkunde</string>
-    <string name="poi_health_specialty_gynaecology_yes">Gynaecologie</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Orthopedie</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Keel-, neus- en oorheelkunde</string>
-    <string name="poi_health_specialty_paediatrics_yes">Kindergeneeskunde</string>
+    <string name="poi_healthcare_speciality_general">Huisarts</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Oogheelkunde</string>
+    <string name="poi_healthcare_speciality_gynaecology">Gynaecologie</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Orthopedie</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Keel-, neus- en oorheelkunde</string>
+    <string name="poi_healthcare_speciality_paediatrics">Kindergeneeskunde</string>
     <string name="poi_health_specialty_paediatrics_no">Gezondheidsspecialiteit: kindergeneeskunde: nee</string>
-    <string name="poi_health_specialty_dermatology_yes">Dermatologie</string>
-    <string name="poi_health_specialty_urology_yes">Urologie</string>
-    <string name="poi_health_specialty_surgery_yes">Algemene chirurgie</string>
-    <string name="poi_health_specialty_radiology_yes">Radiologie</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psychiatrie</string>
-    <string name="poi_health_specialty_neurology_yes">Neurologie</string>
-    <string name="poi_health_specialty_cardiology_yes">Cardiologie</string>
-    <string name="poi_health_specialty_trauma_yes">Traumatologie</string>
-    <string name="poi_health_specialty_biology_yes">Klinische biologie</string>
-    <string name="poi_health_specialty_osteopathy_yes">Osteopathie</string>
-    <string name="poi_health_specialty_pulmonology_yes">Pneumologie</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Tandheelkundige, orale en maxillofaciale chirurgie</string>
-    <string name="poi_health_specialty_maternity_yes">Materniteit</string>
-    <string name="poi_health_specialty_emergency_yes">Spoeddienst</string>
+    <string name="poi_healthcare_speciality_dermatology">Dermatologie</string>
+    <string name="poi_healthcare_speciality_urology">Urologie</string>
+    <string name="poi_healthcare_speciality_surgery">Algemene chirurgie</string>
+    <string name="poi_healthcare_speciality_radiology">Radiologie</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psychiatrie</string>
+    <string name="poi_healthcare_speciality_neurology">Neurologie</string>
+    <string name="poi_healthcare_speciality_cardiology">Cardiologie</string>
+    <string name="poi_healthcare_speciality_trauma">Traumatologie</string>
+    <string name="poi_healthcare_speciality_biology">Klinische biologie</string>
+    <string name="poi_healthcare_speciality_osteopathy">Osteopathie</string>
+    <string name="poi_healthcare_speciality_pulmonology">Pneumologie</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Tandheelkundige, orale en maxillofaciale chirurgie</string>
+    <string name="poi_healthcare_speciality_maternity">Materniteit</string>
+    <string name="poi_healthcare_speciality_emergency">Spoeddienst</string>
     <string name="poi_health_specialty_emergency_medicine_no">Specialiteit gezondheid: Spoeddienst: nee</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Plastische chirurgie</string>
-    <string name="poi_health_specialty_orthodontics_yes">Orthodontie</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Fysiotherapie</string>
-    <string name="poi_health_specialty_biochemistry_yes">Biochemie</string>
-    <string name="poi_health_specialty_occupational_yes">Ergotherapie</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Kinderpsychiatrie</string>
-    <string name="poi_health_specialty_physiatry_yes">Fysische geneeskunde en revalidatie</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Maxillo-faciale chirurgie</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Diagnostische Radiologie</string>
-    <string name="poi_health_specialty_stomatology_yes">Tandheelkunde</string>
-    <string name="poi_health_specialty_nephrology_yes">Nefrologie (nierziekten)</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Neurochirurgie</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Neuropsychiatrie</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endocrinologie</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Nucleaire geneeskunde</string>
-    <string name="poi_health_specialty_naturopathy_yes">Natuurgeneeskunde</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Dieptepsychologie</string>
-    <string name="poi_health_specialty_behavior_yes">Gedragstherapie</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Plastische chirurgie</string>
+    <string name="poi_healthcare_speciality_orthodontics">Orthodontie</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Fysiotherapie</string>
+    <string name="poi_healthcare_speciality_biochemistry">Biochemie</string>
+    <string name="poi_healthcare_speciality_occupational">Ergotherapie</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Kinderpsychiatrie</string>
+    <string name="poi_healthcare_speciality_physiatry">Fysische geneeskunde en revalidatie</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Maxillo-faciale chirurgie</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Diagnostische Radiologie</string>
+    <string name="poi_healthcare_speciality_stomatology">Tandheelkunde</string>
+    <string name="poi_healthcare_speciality_nephrology">Nefrologie (nierziekten)</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Neurochirurgie</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Neuropsychiatrie</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endocrinologie</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Nucleaire geneeskunde</string>
+    <string name="poi_healthcare_speciality_naturopathy">Natuurgeneeskunde</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Dieptepsychologie</string>
+    <string name="poi_healthcare_speciality_behavior">Gedragstherapie</string>
     <string name="poi_disc_golf">Diskgolf</string>
     <string name="poi_rc_car">Radiogestuurde autorace</string>
     <string name="poi_boxing">Boksen</string>
@@ -2714,15 +2714,15 @@
     <string name="poi_fortification_type_hill_fort">Fortificatie type: heuvelfort</string>
     <string name="poi_fortification_type_limes">Fortificatie type: limes</string>
     <string name="poi_fitness_station">Fitness accomodatie</string>
-    <string name="poi_health_specialty_internal_yes">Interne geneeskunde</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Radiotherapie</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Dermatovenereologie</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Anesthesie</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gastroenterologie</string>
-    <string name="poi_health_specialty_pathology_yes">Anatomische pathologie</string>
-    <string name="poi_health_specialty_oncology_yes">Oncologie</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">Obstetrie (post-nataal)</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">Verslavingszorg</string>
+    <string name="poi_healthcare_speciality_internal">Interne geneeskunde</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Radiotherapie</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Dermatovenereologie</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Anesthesie</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gastroenterologie</string>
+    <string name="poi_healthcare_speciality_pathology">Anatomische pathologie</string>
+    <string name="poi_healthcare_speciality_oncology">Oncologie</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">Obstetrie (post-nataal)</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">Verslavingszorg</string>
     <string name="poi_capacity_beds">Capaciteit (bedden)</string>
     <string name="poi_dispensing_yes">Ja</string>
     <string name="poi_organic_yes">Ja</string>
@@ -2750,9 +2750,9 @@
     <string name="poi_bridge_structure_boardwalk">Soort brug: vlonderpad</string>
     <string name="poi_bridge_movable_submersible">Beweegbare brug type: afzinkbaar</string>
     <string name="poi_conveying_yes">Roltrap: ja</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Spraaktherapie</string>
-    <string name="poi_health_specialty_acupuncture_yes">Acupunctuur</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homeopathie</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Spraaktherapie</string>
+    <string name="poi_healthcare_speciality_acupuncture">Acupunctuur</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homeopathie</string>
     <string name="poi_parking_surface">Type: wegdek</string>
     <string name="poi_running">Hardlopen</string>
     <string name="poi_karting">Karten</string>
@@ -2884,25 +2884,25 @@
     <string name="poi_wiki_lang_yo">Yoruba wiki</string>
     <string name="poi_wiki_lang_gu">Gujarati wiki</string>
     <string name="poi_wiki_lang_nap">Neapolitaanse wiki</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Tropische geneeskunde</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Tropische geneeskunde</string>
     <string name="poi_health_specialty_tropical_medicine_no">Gezondheids specialisatie: tropische geneeskunde: nee</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">Geneeskunde specialisatie: verloskunde (postnataal): nee</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Obstetrie (Postnataal)</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Obstetrie (Postnataal)</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Geneeskundige specialisatie: obstetrie (Postnataal): nee</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Sociale pediatrie</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Sociale pediatrie</string>
     <string name="poi_health_specialty_social_paediatrics_no">Geneeskundige specialisatie: sociale pediatrie: nee</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Obstetrie (keizersnede)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Obstetrie (keizersnede)</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Geneeskundige specialisatie: obstetrie (keizersnede): nee</string>
-    <string name="poi_health_specialty_optometry_yes">Optometrie</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Klinische pathologie</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Manuele therapie</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Sportgeneeskunde</string>
-    <string name="poi_health_specialty_podiatry_yes">Podologie</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Psychiatrie volwassenen</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Traditionele Chinese geneeskunde</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
-    <string name="poi_health_specialty_herbalism_yes">Kruidengeneeskunde</string>
-    <string name="poi_health_specialty_chiropractic_yes">Chiropractie</string>
+    <string name="poi_healthcare_speciality_optometry">Optometrie</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Klinische pathologie</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Manuele therapie</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Sportgeneeskunde</string>
+    <string name="poi_healthcare_speciality_podiatry">Podologie</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Psychiatrie volwassenen</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Traditionele Chinese geneeskunde</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
+    <string name="poi_healthcare_speciality_herbalism">Kruidengeneeskunde</string>
+    <string name="poi_healthcare_speciality_chiropractic">Chiropractie</string>
     <string name="poi_fitness_centre">Fitnesscentrum</string>
     <string name="poi_dojo">Dojo</string>
     <string name="poi_gaelic_games">Keltische spelen</string>
@@ -2946,7 +2946,7 @@
     <string name="poi_nuclear_explosion_time_utc">Explosie tijd (UTC)</string>
     <string name="poi_nuclear_explosion_yield">Explosie rendement</string>
     <string name="poi_nuclear_explosion_hole">Explosie gat</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Palliatieve zorg</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Palliatieve zorg</string>
     <string name="poi_climbing_crag_filter">Klimrots</string>
     <string name="poi_access_motorhome">Motorhome toegang</string>
     <string name="poi_atm_yes">Geldautomaat: ja</string>
@@ -3861,7 +3861,7 @@
     <string name="poi_water_source_well">Bron</string>
     <string name="poi_water_source_water_tank">Watertank</string>
     <string name="poi_vaccination_covid19">Vaccinatie: COVID-19</string>
-    <string name="poi_health_specialty_vaccination_yes">Vaccinatie</string>
+    <string name="poi_healthcare_speciality_vaccination">Vaccinatie</string>
     <string name="poi_lifeguard_base">Reddersbasis</string>
     <string name="poi_nurse">Verpleegster</string>
     <string name="poi_diplomatic_services_citizen_services_no">Nee</string>
