--- a/OsmAnd/res/values-ro/phrases.xml
+++ b/OsmAnd/res/values-ro/phrases.xml
@@ -65,7 +65,7 @@
     <string name="poi_washing_machine">Mașină de spălat</string>
     <string name="poi_tents">Corturi</string>
     <string name="poi_massage_type">Tip de masaj</string>
-    <string name="poi_health_specialty">Specialitate de sănătate</string>
+    <string name="poi_healthcare_speciality">Specialitate de sănătate</string>
     <string name="poi_diet">Dietă</string>
     <string name="poi_nudism">Nudism</string>
     <string name="poi_beach_surface_type">Suprafață</string>
@@ -2334,78 +2334,78 @@
     <string name="poi_fitness">Fitness</string>
     <string name="poi_fitness_centre">Centru de fitness</string>
     <string name="poi_building_type_pyramid">Tip clădire: piramidă</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Medicină paliativă</string>
-    <string name="poi_health_specialty_behavior_yes">Comportament</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Psihologia profunzimii</string>
-    <string name="poi_health_specialty_naturopathy_yes">Naturopatie</string>
-    <string name="poi_health_specialty_chiropractic_yes">Chiropractică</string>
-    <string name="poi_health_specialty_herbalism_yes">Herbalistică</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Medicină tradițională chineză</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homeopatie</string>
-    <string name="poi_health_specialty_acupuncture_yes">Acupunctură</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Psihiatrie pentru adulți</string>
-    <string name="poi_health_specialty_podiatry_yes">Podologie</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Medicină sportivă</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Terapia manuală</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Terapia prin vorbire</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Patologie clinică</string>
-    <string name="poi_health_specialty_optometry_yes">Optometrie</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">Medicina dependenței</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Medicină paliativă</string>
+    <string name="poi_healthcare_speciality_behavior">Comportament</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Psihologia profunzimii</string>
+    <string name="poi_healthcare_speciality_naturopathy">Naturopatie</string>
+    <string name="poi_healthcare_speciality_chiropractic">Chiropractică</string>
+    <string name="poi_healthcare_speciality_herbalism">Herbalistică</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Medicină tradițională chineză</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homeopatie</string>
+    <string name="poi_healthcare_speciality_acupuncture">Acupunctură</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Psihiatrie pentru adulți</string>
+    <string name="poi_healthcare_speciality_podiatry">Podologie</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Medicină sportivă</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Terapia manuală</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Terapia prin vorbire</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Patologie clinică</string>
+    <string name="poi_healthcare_speciality_optometry">Optometrie</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">Medicina dependenței</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Specialitatea de sănătate: obstetrică (operație cezariană): nu</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Obstetrică (operație cezariană)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Obstetrică (operație cezariană)</string>
     <string name="poi_health_specialty_social_paediatrics_no">Specialitatea de sănătate: pediatrie socială: nu</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Pediatrie socială</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Pediatrie socială</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Specialitatea medicală: obstetrică (prenatală): nu</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Obstetrică (antenatal)</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Obstetrică (antenatal)</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">Specialitatea de sănătate: obstetrică (postnatală): nu</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">Obstetrică (postnatală)</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">Obstetrică (postnatală)</string>
     <string name="poi_health_specialty_tropical_medicine_no">Specialitatea de sănătate: medicină tropicală: nu</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Medicină tropicală</string>
-    <string name="poi_health_specialty_oncology_yes">Oncologie</string>
-    <string name="poi_health_specialty_pathology_yes">Anatomie patologică</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Medicină nucleară</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endocrinologie</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Neuropsihiatrie</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Chirurgie neurologică</string>
-    <string name="poi_health_specialty_nephrology_yes">Nefrologie (boli renale)</string>
-    <string name="poi_health_specialty_stomatology_yes">Stomatologie</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gastroenterologie</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Radiologie de diagnosticare</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Chirurgie maxilo-facială</string>
-    <string name="poi_health_specialty_physiatry_yes">Medicină fizică și reabilitare</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Psihiatrie infantilă</string>
-    <string name="poi_health_specialty_occupational_yes">Terapie ocupațională</string>
-    <string name="poi_health_specialty_biochemistry_yes">Chimie biologică</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Fizioterapie</string>
-    <string name="poi_health_specialty_orthodontics_yes">Ortodonție</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Chirurgie plastică</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Medicină tropicală</string>
+    <string name="poi_healthcare_speciality_oncology">Oncologie</string>
+    <string name="poi_healthcare_speciality_pathology">Anatomie patologică</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Medicină nucleară</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endocrinologie</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Neuropsihiatrie</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Chirurgie neurologică</string>
+    <string name="poi_healthcare_speciality_nephrology">Nefrologie (boli renale)</string>
+    <string name="poi_healthcare_speciality_stomatology">Stomatologie</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gastroenterologie</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Radiologie de diagnosticare</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Chirurgie maxilo-facială</string>
+    <string name="poi_healthcare_speciality_physiatry">Medicină fizică și reabilitare</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Psihiatrie infantilă</string>
+    <string name="poi_healthcare_speciality_occupational">Terapie ocupațională</string>
+    <string name="poi_healthcare_speciality_biochemistry">Chimie biologică</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Fizioterapie</string>
+    <string name="poi_healthcare_speciality_orthodontics">Ortodonție</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Chirurgie plastică</string>
     <string name="poi_health_specialty_emergency_medicine_no">Specialitatea de sănătate: medicină de urgență și accidente: nu</string>
-    <string name="poi_health_specialty_emergency_yes">Medicină de urgență și accidente</string>
-    <string name="poi_health_specialty_maternity_yes">Maternitate</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Chirurgie dentară, orală și maxilo-facială</string>
-    <string name="poi_health_specialty_pulmonology_yes">Medicină respiratorie</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Anestezie</string>
-    <string name="poi_health_specialty_osteopathy_yes">Osteopatie</string>
-    <string name="poi_health_specialty_biology_yes">Biologie clinică</string>
-    <string name="poi_health_specialty_trauma_yes">Traumatologie</string>
-    <string name="poi_health_specialty_cardiology_yes">Cardiologie</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Dermato-venerologie</string>
-    <string name="poi_health_specialty_neurology_yes">Neurologie</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psihiatru</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Radioterapie</string>
-    <string name="poi_health_specialty_radiology_yes">Radiologie</string>
-    <string name="poi_health_specialty_surgery_yes">Chirurgie generală</string>
-    <string name="poi_health_specialty_urology_yes">Urologie</string>
-    <string name="poi_health_specialty_dermatology_yes">Dermatologie</string>
+    <string name="poi_healthcare_speciality_emergency">Medicină de urgență și accidente</string>
+    <string name="poi_healthcare_speciality_maternity">Maternitate</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Chirurgie dentară, orală și maxilo-facială</string>
+    <string name="poi_healthcare_speciality_pulmonology">Medicină respiratorie</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Anestezie</string>
+    <string name="poi_healthcare_speciality_osteopathy">Osteopatie</string>
+    <string name="poi_healthcare_speciality_biology">Biologie clinică</string>
+    <string name="poi_healthcare_speciality_trauma">Traumatologie</string>
+    <string name="poi_healthcare_speciality_cardiology">Cardiologie</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Dermato-venerologie</string>
+    <string name="poi_healthcare_speciality_neurology">Neurologie</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psihiatru</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Radioterapie</string>
+    <string name="poi_healthcare_speciality_radiology">Radiologie</string>
+    <string name="poi_healthcare_speciality_surgery">Chirurgie generală</string>
+    <string name="poi_healthcare_speciality_urology">Urologie</string>
+    <string name="poi_healthcare_speciality_dermatology">Dermatologie</string>
     <string name="poi_health_specialty_paediatrics_no">Specialitatea medicală: pediatrie: nu</string>
-    <string name="poi_health_specialty_paediatrics_yes">Pediatrie</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Otorinolaringologie</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ortopedie</string>
-    <string name="poi_health_specialty_internal_yes">Medicină internă</string>
-    <string name="poi_health_specialty_gynaecology_yes">Ginecologie</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Oftalmologie</string>
-    <string name="poi_health_specialty_general_yes">Medic generalist</string>
+    <string name="poi_healthcare_speciality_paediatrics">Pediatrie</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Otorinolaringologie</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ortopedie</string>
+    <string name="poi_healthcare_speciality_internal">Medicină internă</string>
+    <string name="poi_healthcare_speciality_gynaecology">Ginecologie</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Oftalmologie</string>
+    <string name="poi_healthcare_speciality_general">Medic generalist</string>
     <string name="poi_aerialway_length">Lungime</string>
     <string name="poi_fireworks">Magazin de artificii</string>
     <string name="poi_craft_electronics_repair">Reparații electronice</string>
@@ -3810,7 +3810,7 @@
     <string name="poi_water_source_water_works">Lucrări de apă</string>
     <string name="poi_water_source_tube_well">Puț de tuburi</string>
     <string name="poi_vaccination_covid19">Vaccinarea: COVID19</string>
-    <string name="poi_health_specialty_vaccination_yes">Vaccinare</string>
+    <string name="poi_healthcare_speciality_vaccination">Vaccinare</string>
     <string name="poi_lifeguard_base">Baza de salvamari</string>
     <string name="poi_siren">Sirenă</string>
     <string name="poi_nurse">Asistentă medicală</string>
@@ -4604,33 +4604,33 @@
     <string name="poi_socket_typee_output_filter">Conector de ieșire de tip E</string>
     <string name="poi_socket_typee_output_medium">Medie</string>
     <string name="poi_socket_typee_current">Mufă: Type E: curent</string>
-    <string name="poi_health_specialty_allergology_yes">Alergologie</string>
+    <string name="poi_healthcare_speciality_allergology">Alergologie</string>
     <string name="poi_socket_typee_output_high">Înaltă</string>
     <string name="poi_socket_typee_voltage_high">Înaltă</string>
     <string name="poi_socket_typee">Mufă: Type E</string>
     <string name="poi_socket_typee_output_low">Joasă</string>
-    <string name="poi_health_specialty_rheumatology_yes">Reumatologie</string>
-    <string name="poi_health_specialty_fertility_yes">Fertilitate</string>
-    <string name="poi_health_specialty_dialysis_yes">Dializă</string>
-    <string name="poi_health_specialty_endodontics_yes">Endodonție</string>
+    <string name="poi_healthcare_speciality_rheumatology">Reumatologie</string>
+    <string name="poi_healthcare_speciality_fertility">Fertilitate</string>
+    <string name="poi_healthcare_speciality_dialysis">Dializă</string>
+    <string name="poi_healthcare_speciality_endodontics">Endodonție</string>
     <string name="poi_checkpoint_cycling">Checkpoint ciclism</string>
-    <string name="poi_health_specialty_periodontics_yes">Parodontologie</string>
-    <string name="poi_health_specialty_covid19_yes">COVID19</string>
-    <string name="poi_health_specialty_vascular_surgery_yes">Chirurgie vasculară</string>
+    <string name="poi_healthcare_speciality_periodontics">Parodontologie</string>
+    <string name="poi_healthcare_speciality_covid19">COVID19</string>
+    <string name="poi_healthcare_speciality_vascular_surgery">Chirurgie vasculară</string>
     <string name="poi_socket_typee_yes">Type E</string>
-    <string name="poi_health_specialty_massage_therapy_yes">Terapie prin masaj</string>
+    <string name="poi_healthcare_speciality_massage_therapy">Terapie prin masaj</string>
     <string name="poi_socket_typee_voltage_low">Joasă</string>
-    <string name="poi_health_specialty_community_yes">Sănătate Publică</string>
-    <string name="poi_health_specialty_cardiac_surgery_yes">Chirurgie cardiacă</string>
-    <string name="poi_health_specialty_blood_check_yes">Analize de sânge</string>
-    <string name="poi_health_specialty_intensive_yes">Intensivă</string>
+    <string name="poi_healthcare_speciality_community">Sănătate Publică</string>
+    <string name="poi_healthcare_speciality_cardiac_surgery">Chirurgie cardiacă</string>
+    <string name="poi_healthcare_speciality_blood_check">Analize de sânge</string>
+    <string name="poi_healthcare_speciality_intensive">Intensivă</string>
     <string name="poi_socket_typee_voltage_medium">Medie</string>
-    <string name="poi_health_specialty_haematology_yes">Hematologie</string>
-    <string name="poi_health_specialty_geriatrics_yes">Geriatrie</string>
-    <string name="poi_health_specialty_paediatric_surgery_yes">Chirurgie pediatrică</string>
-    <string name="poi_health_specialty_paediatric_dentistry_yes">Stomatologie pediatrică</string>
-    <string name="poi_health_specialty_weight_loss_yes">Pierderea greutății</string>
-    <string name="poi_health_specialty_infectious_diseases_yes">Boli infecțioase</string>
+    <string name="poi_healthcare_speciality_haematology">Hematologie</string>
+    <string name="poi_healthcare_speciality_geriatrics">Geriatrie</string>
+    <string name="poi_healthcare_speciality_paediatric_surgery">Chirurgie pediatrică</string>
+    <string name="poi_healthcare_speciality_paediatric_dentistry">Stomatologie pediatrică</string>
+    <string name="poi_healthcare_speciality_weight_loss">Pierderea greutății</string>
+    <string name="poi_healthcare_speciality_infectious_diseases">Boli infecțioase</string>
     <string name="poi_socket_typee_voltage">Mufă: Type E: tensiune</string>
     <string name="poi_socket_typee_output">Mufă: Type E: ieșire</string>
     <string name="poi_dressing_room">Vestiar</string>
