--- a/OsmAnd/res/values-sr/phrases.xml
+++ b/OsmAnd/res/values-sr/phrases.xml
@@ -1414,7 +1414,7 @@
     <string name="poi_backcountry">Забит</string>
     <string name="poi_beauty_salon_service">Услуга</string>
     <string name="poi_diet">Храна</string>
-    <string name="poi_health_specialty">Здравствене услуге</string>
+    <string name="poi_healthcare_speciality">Здравствене услуге</string>
     <string name="poi_power_supply">Извор напајања</string>
     <string name="poi_motorcycle_services">Услуге</string>
     <string name="poi_operational_status">Радно стање</string>
@@ -2346,7 +2346,7 @@
     <string name="poi_aerodrome_type_military">Војни аеродром</string>
     <string name="poi_aerodrome_type_military_public">Војни/цивилни</string>
     <string name="poi_fitness_station">Теретана на отвореном</string>
-    <string name="poi_health_specialty_biochemistry_yes">Биохемија</string>
+    <string name="poi_healthcare_speciality_biochemistry">Биохемија</string>
     <string name="poi_fitness_centre">Теретана</string>
     <string name="poi_fitness">Фитнес</string>
     <string name="poi_car_wash_yes">Да; Прање кола</string>
@@ -2625,72 +2625,72 @@
     <string name="poi_craft_electronics_repair">Сервис за електронику</string>
     <string name="poi_fireworks">Продавница ватромета</string>
     <string name="poi_aerialway_length">Дужина</string>
-    <string name="poi_health_specialty_general_yes">Општа пракса</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Офтамологија</string>
-    <string name="poi_health_specialty_gynaecology_yes">Гинекологија</string>
-    <string name="poi_health_specialty_internal_yes">Интерно</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ортопедија</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Оториноларингологија</string>
-    <string name="poi_health_specialty_paediatrics_yes">Педијатрија</string>
+    <string name="poi_healthcare_speciality_general">Општа пракса</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Офтамологија</string>
+    <string name="poi_healthcare_speciality_gynaecology">Гинекологија</string>
+    <string name="poi_healthcare_speciality_internal">Интерно</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ортопедија</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Оториноларингологија</string>
+    <string name="poi_healthcare_speciality_paediatrics">Педијатрија</string>
     <string name="poi_health_specialty_paediatrics_no">Медицинска специјализација: педијатрија: не</string>
-    <string name="poi_health_specialty_dermatology_yes">Дерматологија</string>
-    <string name="poi_health_specialty_urology_yes">Урологија</string>
-    <string name="poi_health_specialty_surgery_yes">Општа хирургија</string>
-    <string name="poi_health_specialty_radiology_yes">Радиологија</string>
-    <string name="poi_health_specialty_psychiatry_yes">Психијатрија</string>
-    <string name="poi_health_specialty_neurology_yes">Неурологија</string>
-    <string name="poi_health_specialty_cardiology_yes">Кардиологија</string>
-    <string name="poi_health_specialty_trauma_yes">Трауматологија</string>
-    <string name="poi_health_specialty_biology_yes">Клиничка биологија</string>
-    <string name="poi_health_specialty_osteopathy_yes">Остеопатија</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Анестезиологија</string>
-    <string name="poi_health_specialty_pulmonology_yes">Пулмологија</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Зубна, орална и максилофацијална хирургија</string>
-    <string name="poi_health_specialty_maternity_yes">Породиљско</string>
-    <string name="poi_health_specialty_emergency_yes">Ургентна медицина</string>
+    <string name="poi_healthcare_speciality_dermatology">Дерматологија</string>
+    <string name="poi_healthcare_speciality_urology">Урологија</string>
+    <string name="poi_healthcare_speciality_surgery">Општа хирургија</string>
+    <string name="poi_healthcare_speciality_radiology">Радиологија</string>
+    <string name="poi_healthcare_speciality_psychiatry">Психијатрија</string>
+    <string name="poi_healthcare_speciality_neurology">Неурологија</string>
+    <string name="poi_healthcare_speciality_cardiology">Кардиологија</string>
+    <string name="poi_healthcare_speciality_trauma">Трауматологија</string>
+    <string name="poi_healthcare_speciality_biology">Клиничка биологија</string>
+    <string name="poi_healthcare_speciality_osteopathy">Остеопатија</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Анестезиологија</string>
+    <string name="poi_healthcare_speciality_pulmonology">Пулмологија</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Зубна, орална и максилофацијална хирургија</string>
+    <string name="poi_healthcare_speciality_maternity">Породиљско</string>
+    <string name="poi_healthcare_speciality_emergency">Ургентна медицина</string>
     <string name="poi_health_specialty_emergency_medicine_no">Медицинска специјализација: ургентна медицина: не</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Пластична хирургија</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Физиотерапија</string>
-    <string name="poi_health_specialty_occupational_yes">Окупациона терапија</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Дечија психијатрија</string>
-    <string name="poi_health_specialty_physiatry_yes">Физикална медицина и рехабилитација</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Максилофацијална хирургија</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Медицинско снимање</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Гастроентерологија</string>
-    <string name="poi_health_specialty_stomatology_yes">Стоматологија</string>
-    <string name="poi_health_specialty_nephrology_yes">Нефрологија (реналне болести)</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Неурохирургија</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Неуропсихијатрија</string>
-    <string name="poi_health_specialty_endocrinology_yes">Ендокринологија</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Нуклеарна медиција</string>
-    <string name="poi_health_specialty_pathology_yes">Патологија</string>
-    <string name="poi_health_specialty_oncology_yes">Онкологија</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Тропска медицина</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Пластична хирургија</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Физиотерапија</string>
+    <string name="poi_healthcare_speciality_occupational">Окупациона терапија</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Дечија психијатрија</string>
+    <string name="poi_healthcare_speciality_physiatry">Физикална медицина и рехабилитација</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Максилофацијална хирургија</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Медицинско снимање</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Гастроентерологија</string>
+    <string name="poi_healthcare_speciality_stomatology">Стоматологија</string>
+    <string name="poi_healthcare_speciality_nephrology">Нефрологија (реналне болести)</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Неурохирургија</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Неуропсихијатрија</string>
+    <string name="poi_healthcare_speciality_endocrinology">Ендокринологија</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Нуклеарна медиција</string>
+    <string name="poi_healthcare_speciality_pathology">Патологија</string>
+    <string name="poi_healthcare_speciality_oncology">Онкологија</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Тропска медицина</string>
     <string name="poi_health_specialty_tropical_medicine_no">Медицинска специјализација: тропска медицина: не</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">Акушерство (постнатално)</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">Акушерство (постнатално)</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">Медицинска специјализација: акушерство (постнатално): не</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Акушерство (пренатално)</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Акушерство (пренатално)</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Медицинска специјализација: акушерство (пренатално): не</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Друштвена педијатрија</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Друштвена педијатрија</string>
     <string name="poi_health_specialty_social_paediatrics_no">Медицинска специјализација: друштвена педијатрија: не</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Акушерство (царски рез)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Акушерство (царски рез)</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Медицинска специјализација: акушерство (царски рез): не</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">Лечење болести зависности</string>
-    <string name="poi_health_specialty_optometry_yes">Оптометрија</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Клиничка патологија</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Логопед</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Спортска масажа</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Спортска медицина</string>
-    <string name="poi_health_specialty_acupuncture_yes">Акупунктура</string>
-    <string name="poi_health_specialty_homeopathy_yes">Хомеопатија</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Традиционална кинеска медицина</string>
-    <string name="poi_health_specialty_reiki_yes">Реики</string>
-    <string name="poi_health_specialty_herbalism_yes">Траварство</string>
-    <string name="poi_health_specialty_chiropractic_yes">Киропрактичар</string>
-    <string name="poi_health_specialty_naturopathy_yes">Натуропатија</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Дубинска психологија</string>
-    <string name="poi_health_specialty_behavior_yes">Бихејвиорална терапија</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Палијативна медицина</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">Лечење болести зависности</string>
+    <string name="poi_healthcare_speciality_optometry">Оптометрија</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Клиничка патологија</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Логопед</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Спортска масажа</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Спортска медицина</string>
+    <string name="poi_healthcare_speciality_acupuncture">Акупунктура</string>
+    <string name="poi_healthcare_speciality_homeopathy">Хомеопатија</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Традиционална кинеска медицина</string>
+    <string name="poi_healthcare_speciality_reiki">Реики</string>
+    <string name="poi_healthcare_speciality_herbalism">Траварство</string>
+    <string name="poi_healthcare_speciality_chiropractic">Киропрактичар</string>
+    <string name="poi_healthcare_speciality_naturopathy">Натуропатија</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Дубинска психологија</string>
+    <string name="poi_healthcare_speciality_behavior">Бихејвиорална терапија</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Палијативна медицина</string>
     <string name="poi_building_type_pyramid">Тип зграде: пирамида</string>
     <string name="poi_billiards">Билијар</string>
     <string name="poi_microwave_oven_yes">Микроталасна: да</string>
@@ -2716,7 +2716,7 @@
     <string name="poi_dolphin">Делфин</string>
     <string name="poi_denotation">Денотација</string>
     <string name="poi_rtsa_scale_filter">Категорија тежине</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Радиотерапија</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Радиотерапија</string>
     <string name="reddit">Reddit</string>
     <string name="poi_historic_tank">Историјски резервоар</string>
     <string name="poi_generator_source_biomass">Извор енергије: биомаса</string>
@@ -2800,10 +2800,10 @@
     <string name="poi_forestry_allotment">Показивач: шумарско одељење</string>
     <string name="poi_forestry_compartment">Показивач: шумарско одељење</string>
     <string name="poi_disc_golf">Диск голф</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Психијатрија за одрасле</string>
-    <string name="poi_health_specialty_podiatry_yes">Подологија</string>
-    <string name="poi_health_specialty_orthodontics_yes">Ортодонија</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Дермато-венереологија</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Психијатрија за одрасле</string>
+    <string name="poi_healthcare_speciality_podiatry">Подологија</string>
+    <string name="poi_healthcare_speciality_orthodontics">Ортодонија</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Дермато-венереологија</string>
     <string name="poi_traffic_signals_arrow">Стрелица</string>
     <string name="poi_traffic_signals_vibration">Вибрација</string>
     <string name="poi_access_mofa">Мофа приступ</string>
@@ -3859,7 +3859,7 @@
     <string name="poi_water_source_lake">Језеро</string>
     <string name="poi_water_source_river">Река</string>
     <string name="poi_vaccination_covid19">Цепљење: Ковид 19</string>
-    <string name="poi_health_specialty_vaccination_yes">Цепљење</string>
+    <string name="poi_healthcare_speciality_vaccination">Цепљење</string>
     <string name="poi_club_social">Друштвени клуб</string>
     <string name="poi_plateau">Плато</string>
     <string name="poi_office_diplomatic">Дипломатско представништво</string>
