--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -70,7 +70,7 @@
 	<string name="poi_beach_surface_type">Surface</string>
 	<string name="poi_nudism">Nudism</string>
 	<string name="poi_diet">Diet</string>
-	<string name="poi_health_specialty">Health specialty</string>
+	<string name="poi_healthcare_speciality">Health specialty</string>
 	<string name="poi_massage_type">Massage type</string>
 	<string name="poi_tents">Tents</string>
 	<string name="poi_washing_machine">Washing machine</string>
@@ -2680,78 +2680,78 @@
 
 	<string name="poi_aerialway_length">Length</string>
 
-	<string name="poi_health_specialty_general_yes">General practitioner</string>
-	<string name="poi_health_specialty_ophthalmology_yes">Ophthalmology</string>
-	<string name="poi_health_specialty_gynaecology_yes">Gynaecology</string>
-	<string name="poi_health_specialty_internal_yes">Internal medicine</string>
-	<string name="poi_health_specialty_orthopaedics_yes">Orthopaedics</string>
-	<string name="poi_health_specialty_otolaryngology_yes">Otolaryngology</string>
-	<string name="poi_health_specialty_paediatrics_yes">Paediatrics</string>
+	<string name="poi_healthcare_speciality_general">General practitioner</string>
+	<string name="poi_healthcare_speciality_ophthalmology">Ophthalmology</string>
+	<string name="poi_healthcare_speciality_gynaecology">Gynaecology</string>
+	<string name="poi_healthcare_speciality_internal">Internal medicine</string>
+	<string name="poi_healthcare_speciality_orthopaedics">Orthopaedics</string>
+	<string name="poi_healthcare_speciality_otolaryngology">Otolaryngology</string>
+	<string name="poi_healthcare_speciality_paediatrics">Paediatrics</string>
 	<string name="poi_health_specialty_paediatrics_no">Health specialty: paediatrics: no</string>
-	<string name="poi_health_specialty_dermatology_yes">Dermatology</string>
-	<string name="poi_health_specialty_urology_yes">Urology</string>
-	<string name="poi_health_specialty_surgery_yes">General surgery</string>
-	<string name="poi_health_specialty_radiology_yes">Radiology</string>
-	<string name="poi_health_specialty_radiotherapy_yes">Radiotherapy</string>
-	<string name="poi_health_specialty_psychiatry_yes">Psychiatry</string>
-	<string name="poi_health_specialty_neurology_yes">Neurology</string>
-	<string name="poi_health_specialty_dermatovenereology_yes">Dermato-venereology</string>
-	<string name="poi_health_specialty_cardiology_yes">Cardiology</string>
-	<string name="poi_health_specialty_trauma_yes">Traumatology</string>
-	<string name="poi_health_specialty_biology_yes">Clinical biology</string>
-	<string name="poi_health_specialty_osteopathy_yes">Osteopathy</string>
-	<string name="poi_health_specialty_anaesthetics_yes">Anaesthetics</string>
-	<string name="poi_health_specialty_pulmonology_yes">Respiratory medicine</string>
-	<string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Dental, oral and maxillo-facial surgery</string>
-	<string name="poi_health_specialty_maternity_yes">Maternity</string>
-	<string name="poi_health_specialty_emergency_yes">Accident and emergency medicine</string>
+	<string name="poi_healthcare_speciality_dermatology">Dermatology</string>
+	<string name="poi_healthcare_speciality_urology">Urology</string>
+	<string name="poi_healthcare_speciality_surgery">General surgery</string>
+	<string name="poi_healthcare_speciality_radiology">Radiology</string>
+	<string name="poi_healthcare_speciality_radiotherapy">Radiotherapy</string>
+	<string name="poi_healthcare_speciality_psychiatry">Psychiatry</string>
+	<string name="poi_healthcare_speciality_neurology">Neurology</string>
+	<string name="poi_healthcare_speciality_dermatovenereology">Dermato-venereology</string>
+	<string name="poi_healthcare_speciality_cardiology">Cardiology</string>
+	<string name="poi_healthcare_speciality_trauma">Traumatology</string>
+	<string name="poi_healthcare_speciality_biology">Clinical biology</string>
+	<string name="poi_healthcare_speciality_osteopathy">Osteopathy</string>
+	<string name="poi_healthcare_speciality_anaesthetics">Anaesthetics</string>
+	<string name="poi_healthcare_speciality_pulmonology">Respiratory medicine</string>
+	<string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Dental, oral and maxillo-facial surgery</string>
+	<string name="poi_healthcare_speciality_maternity">Maternity</string>
+	<string name="poi_healthcare_speciality_emergency">Accident and emergency medicine</string>
 	<string name="poi_health_specialty_emergency_medicine_no">Health specialty: accident and emergency medicine: no</string>
-	<string name="poi_health_specialty_plastic_surgery_yes">Plastic surgery</string>
-	<string name="poi_health_specialty_orthodontics_yes">Orthodontics</string>
-	<string name="poi_health_specialty_physiotherapy_yes">Physiotherapy</string>
-	<string name="poi_health_specialty_biochemistry_yes">Biological chemistry</string>
-	<string name="poi_health_specialty_occupational_yes">Occupational therapy</string>
-	<string name="poi_health_specialty_child_psychiatry_yes">Child psychiatry</string>
-	<string name="poi_health_specialty_physiatry_yes">Physical medicine and rehabilitation</string>
-	<string name="poi_health_specialty_maxillofacial_surgery_yes">Maxillo-facial surgery</string>
-	<string name="poi_health_specialty_diagnostic_radiology_yes">Diagnostic radiology</string>
-	<string name="poi_health_specialty_gastroenterology_yes">Gastroenterology</string>
-	<string name="poi_health_specialty_stomatology_yes">Dentistry</string>
-	<string name="poi_health_specialty_nephrology_yes">Nephrology (renal diseases)</string>
-	<string name="poi_health_specialty_neurosurgery_yes">Neurological surgery</string>
-	<string name="poi_health_specialty_neuropsychiatry_yes">Neuropsychiatry</string>
-	<string name="poi_health_specialty_endocrinology_yes">Endocrinology</string>
-	<string name="poi_health_specialty_nuclear_medicine_yes">Nuclear medicine</string>
-	<string name="poi_health_specialty_pathology_yes">Pathological anatomy</string>
-	<string name="poi_health_specialty_oncology_yes">Oncology</string>
-	<string name="poi_health_specialty_tropical_medicine_yes">Tropical medicine</string>
+	<string name="poi_healthcare_speciality_plastic_surgery">Plastic surgery</string>
+	<string name="poi_healthcare_speciality_orthodontics">Orthodontics</string>
+	<string name="poi_healthcare_speciality_physiotherapy">Physiotherapy</string>
+	<string name="poi_healthcare_speciality_biochemistry">Biological chemistry</string>
+	<string name="poi_healthcare_speciality_occupational">Occupational therapy</string>
+	<string name="poi_healthcare_speciality_child_psychiatry">Child psychiatry</string>
+	<string name="poi_healthcare_speciality_physiatry">Physical medicine and rehabilitation</string>
+	<string name="poi_healthcare_speciality_maxillofacial_surgery">Maxillo-facial surgery</string>
+	<string name="poi_healthcare_speciality_diagnostic_radiology">Diagnostic radiology</string>
+	<string name="poi_healthcare_speciality_gastroenterology">Gastroenterology</string>
+	<string name="poi_healthcare_speciality_stomatology">Dentistry</string>
+	<string name="poi_healthcare_speciality_nephrology">Nephrology (renal diseases)</string>
+	<string name="poi_healthcare_speciality_neurosurgery">Neurological surgery</string>
+	<string name="poi_healthcare_speciality_neuropsychiatry">Neuropsychiatry</string>
+	<string name="poi_healthcare_speciality_endocrinology">Endocrinology</string>
+	<string name="poi_healthcare_speciality_nuclear_medicine">Nuclear medicine</string>
+	<string name="poi_healthcare_speciality_pathology">Pathological anatomy</string>
+	<string name="poi_healthcare_speciality_oncology">Oncology</string>
+	<string name="poi_healthcare_speciality_tropical_medicine">Tropical medicine</string>
 	<string name="poi_health_specialty_tropical_medicine_no">Health specialty: tropical medicine: no</string>
-	<string name="poi_health_specialty_obstetrics_postnatal_yes">Obstetrics (postnatal)</string>
+	<string name="poi_healthcare_speciality_obstetrics_postnatal">Obstetrics (postnatal)</string>
 	<string name="poi_health_specialty_obstetrics_postnatal_no">Health specialty: obstetrics (postnatal): no</string>
-	<string name="poi_health_specialty_obstetrics_antenatal_yes">Obstetrics (antenatal)</string>
+	<string name="poi_healthcare_speciality_obstetrics_antenatal">Obstetrics (antenatal)</string>
 	<string name="poi_health_specialty_obstetrics_antenatal_no">Health specialty: obstetrics (antenatal): no</string>
-	<string name="poi_health_specialty_social_paediatrics_yes">Social paediatrics</string>
+	<string name="poi_healthcare_speciality_social_paediatrics">Social paediatrics</string>
 	<string name="poi_health_specialty_social_paediatrics_no">Health specialty: social paediatrics: no</string>
-	<string name="poi_health_specialty_obstetrics_caesarean_section_yes">Obstetrics (caesarean section)</string>
+	<string name="poi_healthcare_speciality_obstetrics_caesarean_section">Obstetrics (caesarean section)</string>
 	<string name="poi_health_specialty_obstetrics_caesarean_section_no">Health specialty: obstetrics (caesarean section): no</string>
-	<string name="poi_health_specialty_addiction_medicine_yes">Addiction medicine</string>
-	<string name="poi_health_specialty_optometry_yes">Optometry</string>
-	<string name="poi_health_specialty_clinical_pathology_yes">Clinical pathology</string>
-	<string name="poi_health_specialty_speech_therapy_yes">Speech therapy</string>
-	<string name="poi_health_specialty_manual_therapy_yes">Manual therapy</string>
-	<string name="poi_health_specialty_sports_medicine_yes">Sports medicine</string>
-	<string name="poi_health_specialty_podiatry_yes">Podiatry</string>
-	<string name="poi_health_specialty_adult_psychiatry_yes">Adult psychiatry</string>
-	<string name="poi_health_specialty_acupuncture_yes">Acupuncture</string>
-	<string name="poi_health_specialty_homeopathy_yes">Homeopathy</string>
-	<string name="poi_health_specialty_traditional_chinese_medicine_yes">Traditional chinese medicine</string>
-	<string name="poi_health_specialty_reiki_yes">Reiki</string>
-	<string name="poi_health_specialty_herbalism_yes">Herbalism</string>
-	<string name="poi_health_specialty_chiropractic_yes">Chiropractic</string>
-	<string name="poi_health_specialty_naturopathy_yes">Naturopathy</string>
-	<string name="poi_health_specialty_depth_psychology_yes">Depth psychology</string>
-	<string name="poi_health_specialty_behavior_yes">Behavior</string>
-	<string name="poi_health_specialty_palliative_medicine_yes">Palliative medicine</string>
+	<string name="poi_healthcare_speciality_addiction_medicine">Addiction medicine</string>
+	<string name="poi_healthcare_speciality_optometry">Optometry</string>
+	<string name="poi_healthcare_speciality_clinical_pathology">Clinical pathology</string>
+	<string name="poi_healthcare_speciality_speech_therapy">Speech therapy</string>
+	<string name="poi_healthcare_speciality_manual_therapy">Manual therapy</string>
+	<string name="poi_healthcare_speciality_sports_medicine">Sports medicine</string>
+	<string name="poi_healthcare_speciality_podiatry">Podiatry</string>
+	<string name="poi_healthcare_speciality_adult_psychiatry">Adult psychiatry</string>
+	<string name="poi_healthcare_speciality_acupuncture">Acupuncture</string>
+	<string name="poi_healthcare_speciality_homeopathy">Homeopathy</string>
+	<string name="poi_healthcare_speciality_traditional_chinese_medicine">Traditional chinese medicine</string>
+	<string name="poi_healthcare_speciality_reiki">Reiki</string>
+	<string name="poi_healthcare_speciality_herbalism">Herbalism</string>
+	<string name="poi_healthcare_speciality_chiropractic">Chiropractic</string>
+	<string name="poi_healthcare_speciality_naturopathy">Naturopathy</string>
+	<string name="poi_healthcare_speciality_depth_psychology">Depth psychology</string>
+	<string name="poi_healthcare_speciality_behavior">Behavior</string>
+	<string name="poi_healthcare_speciality_palliative_medicine">Palliative medicine</string>
 
 	<string name="poi_building_type_pyramid">Building type: pyramid</string>
 
@@ -4371,7 +4371,7 @@
 
 	<string name="poi_siren">Siren</string>
 
-	<string name="poi_health_specialty_vaccination_yes">Vaccination</string>
+	<string name="poi_healthcare_speciality_vaccination">Vaccination</string>
 	<string name="poi_vaccination_covid19">Vaccination: COVID19</string>
 
 	<string name="poi_water_source_tube_well">Tube well</string>
@@ -5180,25 +5180,25 @@
 	<string name="poi_motorcar_designated">Designated for motorcars</string>
 	<string name="poi_vehicle_designated">Designated for vehicles</string>
 
-	<string name="poi_health_specialty_allergology_yes">Allergology</string>
-	<string name="poi_health_specialty_cardiac_surgery_yes">Cardiac surgery</string>
-	<string name="poi_health_specialty_endodontics_yes">Endodontics</string>
-	<string name="poi_health_specialty_geriatrics_yes">Geriatrics</string>
-	<string name="poi_health_specialty_haematology_yes">Haematology</string>
-	<string name="poi_health_specialty_infectious_diseases_yes">Infectious diseases</string>
-	<string name="poi_health_specialty_paediatric_dentistry_yes">Paediatric dentistry</string>
-	<string name="poi_health_specialty_paediatric_surgery_yes">Paediatric surgery</string>
-	<string name="poi_health_specialty_periodontics_yes">Periodontics</string>
-	<string name="poi_health_specialty_rheumatology_yes">Rheumatology</string>
-	<string name="poi_health_specialty_community_yes">Community</string>
-	<string name="poi_health_specialty_dialysis_yes">Dialysis</string>
-	<string name="poi_health_specialty_covid19_yes">COVID19</string>
-	<string name="poi_health_specialty_weight_loss_yes">Weight loss</string>
-	<string name="poi_health_specialty_blood_check_yes">Blood check</string>
-	<string name="poi_health_specialty_intensive_yes">Intensive</string>
-	<string name="poi_health_specialty_fertility_yes">Fertility</string>
-	<string name="poi_health_specialty_massage_therapy_yes">Massage therapy</string>
-	<string name="poi_health_specialty_vascular_surgery_yes">Vascular surgery</string>
+	<string name="poi_healthcare_speciality_allergology">Allergology</string>
+	<string name="poi_healthcare_speciality_cardiac_surgery">Cardiac surgery</string>
+	<string name="poi_healthcare_speciality_endodontics">Endodontics</string>
+	<string name="poi_healthcare_speciality_geriatrics">Geriatrics</string>
+	<string name="poi_healthcare_speciality_haematology">Haematology</string>
+	<string name="poi_healthcare_speciality_infectious_diseases">Infectious diseases</string>
+	<string name="poi_healthcare_speciality_paediatric_dentistry">Paediatric dentistry</string>
+	<string name="poi_healthcare_speciality_paediatric_surgery">Paediatric surgery</string>
+	<string name="poi_healthcare_speciality_periodontics">Periodontics</string>
+	<string name="poi_healthcare_speciality_rheumatology">Rheumatology</string>
+	<string name="poi_healthcare_speciality_community">Community</string>
+	<string name="poi_healthcare_speciality_dialysis">Dialysis</string>
+	<string name="poi_healthcare_speciality_covid19">COVID19</string>
+	<string name="poi_healthcare_speciality_weight_loss">Weight loss</string>
+	<string name="poi_healthcare_speciality_blood_check">Blood check</string>
+	<string name="poi_healthcare_speciality_intensive">Intensive</string>
+	<string name="poi_healthcare_speciality_fertility">Fertility</string>
+	<string name="poi_healthcare_speciality_massage_therapy">Massage therapy</string>
+	<string name="poi_healthcare_speciality_vascular_surgery">Vascular surgery</string>
 
 	<string name="poi_checkpoint_cycling">Cycling checkpoint</string>
 
