--- a/OsmAnd/res/values-gl/phrases.xml
+++ b/OsmAnd/res/values-gl/phrases.xml
@@ -1046,7 +1046,7 @@
     <string name="poi_beach_surface_type">Superficie</string>
     <string name="poi_nudism">Nudismo</string>
     <string name="poi_diet">Dieta</string>
-    <string name="poi_health_specialty">Especialidade de saúde</string>
+    <string name="poi_healthcare_speciality">Especialidade de saúde</string>
     <string name="poi_massage_type">Tipo de masaxe</string>
     <string name="poi_tents">Tendas</string>
     <string name="poi_washing_machine">Lavadora</string>
@@ -1572,7 +1572,7 @@
     <string name="poi_concentration_camp_nazism">Tipo: nazi</string>
     <string name="poi_concentration_camp_gulag">Tipo: gulag</string>
     <string name="poi_conveying_yes">Transportadora: si</string>
-    <string name="poi_health_specialty_physiatry_yes">Medicina física e rehabilitacións</string>
+    <string name="poi_healthcare_speciality_physiatry">Medicina física e rehabilitacións</string>
     <string name="poi_building_type_pyramid">Tipo de edificio: pirámide</string>
     <string name="poi_parking_surface">Tipo: na superficie</string>
     <string name="poi_nuclear_explosion_type_atmospheric">Tipo de estourido: atmosférico</string>
@@ -1659,7 +1659,7 @@
     <string name="poi_socket_type2_combo_yes">Tipo 2 combinado</string>
     <string name="poi_socket_type3_yes">Tipo 3</string>
     <string name="poi_payment_contactless_no">Non se admiten tarxetas sen contacto (Contactless)</string>
-    <string name="poi_health_specialty_emergency_yes">Medicina de urxencia</string>
+    <string name="poi_healthcare_speciality_emergency">Medicina de urxencia</string>
     <string name="poi_health_specialty_emergency_medicine_no">Especialidade en saúde: sen medicina de urxencia</string>
     <string name="poi_emergency_yes">Urxencias: si</string>
     <string name="poi_emergency_no">Urxencias: non</string>
@@ -2951,74 +2951,74 @@
     <string name="poi_craft_electronics_repair">Arranxo de electrónicos</string>
     <string name="poi_fireworks">Tenda de fogos artificiais</string>
     <string name="poi_aerialway_length">Lonxitude</string>
-    <string name="poi_health_specialty_general_yes">Médico xeral</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Oftalmoloxía</string>
-    <string name="poi_health_specialty_gynaecology_yes">Xinecoloxía</string>
-    <string name="poi_health_specialty_internal_yes">Medicina interna</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ortopedia</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Otorrinolaringoloxía</string>
-    <string name="poi_health_specialty_paediatrics_yes">Pediatría</string>
+    <string name="poi_healthcare_speciality_general">Médico xeral</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Oftalmoloxía</string>
+    <string name="poi_healthcare_speciality_gynaecology">Xinecoloxía</string>
+    <string name="poi_healthcare_speciality_internal">Medicina interna</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ortopedia</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Otorrinolaringoloxía</string>
+    <string name="poi_healthcare_speciality_paediatrics">Pediatría</string>
     <string name="poi_health_specialty_paediatrics_no">Especialidade en saúde: sen pediatría</string>
-    <string name="poi_health_specialty_dermatology_yes">Dermatoloxía</string>
-    <string name="poi_health_specialty_urology_yes">Uroloxía</string>
-    <string name="poi_health_specialty_surgery_yes">Cirurxía xeral</string>
-    <string name="poi_health_specialty_radiology_yes">Radioloxía</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psiquiatría</string>
-    <string name="poi_health_specialty_neurology_yes">Neuroloxía</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Dermatovenereoloxía</string>
-    <string name="poi_health_specialty_cardiology_yes">Cardioloxía</string>
-    <string name="poi_health_specialty_trauma_yes">Traumatoloxía</string>
-    <string name="poi_health_specialty_biology_yes">Bioloxía clínica</string>
-    <string name="poi_health_specialty_osteopathy_yes">Osteopatía</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Anestesioloxía</string>
-    <string name="poi_health_specialty_pulmonology_yes">Pneumoloxía</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Cirurxía dental, oral e maxilofacial</string>
-    <string name="poi_health_specialty_maternity_yes">Maternidade</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Cirurxía plástica</string>
-    <string name="poi_health_specialty_orthodontics_yes">Ortodoncia</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Psicoterapia</string>
-    <string name="poi_health_specialty_biochemistry_yes">Bioquímica</string>
-    <string name="poi_health_specialty_occupational_yes">Terapia ocupacional</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Psiquiatría infantil</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Cirurxía maxilofacial</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Radioloxía diagnóstica</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gastroenteroloxía</string>
-    <string name="poi_health_specialty_stomatology_yes">Odontoloxía</string>
-    <string name="poi_health_specialty_nephrology_yes">Nefroloxía (doenzas renais)</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Neurocirurxía</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Neuropsiquiatría</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endocrinoloxía</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Medicina nuclear</string>
-    <string name="poi_health_specialty_pathology_yes">Anatomía patolóxica</string>
-    <string name="poi_health_specialty_oncology_yes">Oncoloxía</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Medicina tropical</string>
+    <string name="poi_healthcare_speciality_dermatology">Dermatoloxía</string>
+    <string name="poi_healthcare_speciality_urology">Uroloxía</string>
+    <string name="poi_healthcare_speciality_surgery">Cirurxía xeral</string>
+    <string name="poi_healthcare_speciality_radiology">Radioloxía</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psiquiatría</string>
+    <string name="poi_healthcare_speciality_neurology">Neuroloxía</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Dermatovenereoloxía</string>
+    <string name="poi_healthcare_speciality_cardiology">Cardioloxía</string>
+    <string name="poi_healthcare_speciality_trauma">Traumatoloxía</string>
+    <string name="poi_healthcare_speciality_biology">Bioloxía clínica</string>
+    <string name="poi_healthcare_speciality_osteopathy">Osteopatía</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Anestesioloxía</string>
+    <string name="poi_healthcare_speciality_pulmonology">Pneumoloxía</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Cirurxía dental, oral e maxilofacial</string>
+    <string name="poi_healthcare_speciality_maternity">Maternidade</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Cirurxía plástica</string>
+    <string name="poi_healthcare_speciality_orthodontics">Ortodoncia</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Psicoterapia</string>
+    <string name="poi_healthcare_speciality_biochemistry">Bioquímica</string>
+    <string name="poi_healthcare_speciality_occupational">Terapia ocupacional</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Psiquiatría infantil</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Cirurxía maxilofacial</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Radioloxía diagnóstica</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gastroenteroloxía</string>
+    <string name="poi_healthcare_speciality_stomatology">Odontoloxía</string>
+    <string name="poi_healthcare_speciality_nephrology">Nefroloxía (doenzas renais)</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Neurocirurxía</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Neuropsiquiatría</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endocrinoloxía</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Medicina nuclear</string>
+    <string name="poi_healthcare_speciality_pathology">Anatomía patolóxica</string>
+    <string name="poi_healthcare_speciality_oncology">Oncoloxía</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Medicina tropical</string>
     <string name="poi_health_specialty_tropical_medicine_no">Especialidade en saúde: sen medicina tropical</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">Obstetricia (postnatal)</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">Obstetricia (postnatal)</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">Especialidade en saúde: sen obstetricia (postnatal)</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Obstetricia (prenatal</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Obstetricia (prenatal</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Especialidade en saúde: sen obstetricia (prenatal)</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Pediatría social</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Pediatría social</string>
     <string name="poi_health_specialty_social_paediatrics_no">Especialidade en saúde: sen pediatría social</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Obstetricia (cesárea)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Obstetricia (cesárea)</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Especialidade en saúde: sen obstetricia (cesárea)</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">Medicina toxicolóxica</string>
-    <string name="poi_health_specialty_optometry_yes">Optometría</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Patoloxía clínica</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Terapia da fala</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Terapia manual</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Medicina deportiva</string>
-    <string name="poi_health_specialty_podiatry_yes">Podoloxía</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Psiquiatría adulta</string>
-    <string name="poi_health_specialty_acupuncture_yes">Acupuntura</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homeopatía</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Medicina chinesa tradicional</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
-    <string name="poi_health_specialty_herbalism_yes">Herbolaria</string>
-    <string name="poi_health_specialty_chiropractic_yes">Quiropraxia</string>
-    <string name="poi_health_specialty_naturopathy_yes">Naturopatía</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Psicoloxía profunda</string>
-    <string name="poi_health_specialty_behavior_yes">Comportamento</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Medicina paliativa</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">Medicina toxicolóxica</string>
+    <string name="poi_healthcare_speciality_optometry">Optometría</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Patoloxía clínica</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Terapia da fala</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Terapia manual</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Medicina deportiva</string>
+    <string name="poi_healthcare_speciality_podiatry">Podoloxía</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Psiquiatría adulta</string>
+    <string name="poi_healthcare_speciality_acupuncture">Acupuntura</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homeopatía</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Medicina chinesa tradicional</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
+    <string name="poi_healthcare_speciality_herbalism">Herbolaria</string>
+    <string name="poi_healthcare_speciality_chiropractic">Quiropraxia</string>
+    <string name="poi_healthcare_speciality_naturopathy">Naturopatía</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Psicoloxía profunda</string>
+    <string name="poi_healthcare_speciality_behavior">Comportamento</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Medicina paliativa</string>
     <string name="poi_fitness_centre">Ximnasio</string>
     <string name="poi_fitness">Exercicio físico</string>
     <string name="poi_billiards">Billar</string>
@@ -3554,7 +3554,7 @@
     <string name="poi_rtsa_scale_3b_asterisk">3B*</string>
     <string name="poi_flare">Chama de gas;Queimadura de facho</string>
     <string name="poi_change_delete">Obxecto eliminado</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Radioterapia</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Radioterapia</string>
     <string name="poi_climbing_crag_filter">Penedo de escalada</string>
     <string name="poi_climbing_crag">Si</string>
     <string name="reddit">Reddit</string>
@@ -3873,7 +3873,7 @@
     <string name="poi_water_source_water_works">Tratamento de augas</string>
     <string name="poi_water_source_tube_well">Ben intubado</string>
     <string name="poi_vaccination_covid19">Vacinación: COVID19</string>
-    <string name="poi_health_specialty_vaccination_yes">Vacinación</string>
+    <string name="poi_healthcare_speciality_vaccination">Vacinación</string>
     <string name="poi_lifeguard_base">Base de salvavidas</string>
     <string name="poi_wildlife_crossing_bat_tunnel">Túnel para morcegos</string>
     <string name="poi_wildlife_crossing_bat_bridge">Ponte para morcegos</string>
