--- a/OsmAnd/res/values-nb/phrases.xml
+++ b/OsmAnd/res/values-nb/phrases.xml
@@ -1201,7 +1201,7 @@
     <string name="poi_scout_camp">Speiderleir</string>
     <string name="poi_theatre_genre">Sjanger</string>
     <string name="poi_water_characteristic">Vannegenskap</string>
-    <string name="poi_health_specialty">Helsespesialitet</string>
+    <string name="poi_healthcare_speciality">Helsespesialitet</string>
     <string name="poi_climbing_style">Klatringsstil</string>
     <string name="poi_socket">Uttak</string>
     <string name="poi_checkpoint_type">Kontrollpunktstype</string>
