--- a/OsmAnd/res/values-nn/phrases.xml
+++ b/OsmAnd/res/values-nn/phrases.xml
@@ -299,7 +299,7 @@
     <string name="poi_beach_surface_type">Overflate</string>
     <string name="poi_nudism">Nudisme</string>
     <string name="poi_diet">Diett</string>
-    <string name="poi_health_specialty">Helsespesialitet</string>
+    <string name="poi_healthcare_speciality">Helsespesialitet</string>
     <string name="poi_massage_type">Massasjetype</string>
     <string name="poi_caravans">Campingvognar</string>
     <string name="poi_power_supply">Straumforsyning</string>
