--- a/OsmAnd/res/values-oc/phrases.xml
+++ b/OsmAnd/res/values-oc/phrases.xml
@@ -40,7 +40,7 @@
     <string name="poi_beach_surface_type">Superficia</string>
     <string name="poi_nudism">Nudisme</string>
     <string name="poi_diet">Dieta</string>
-    <string name="poi_health_specialty">Especialitat medicala</string>
+    <string name="poi_healthcare_speciality">Especialitat medicala</string>
     <string name="poi_massage_type">Tipe de massatge</string>
     <string name="poi_washing_machine">Bugadoira</string>
     <string name="poi_caravans">Caravanas</string>
