--- a/OsmAnd/res/values-pt/phrases.xml
+++ b/OsmAnd/res/values-pt/phrases.xml
@@ -322,7 +322,7 @@
     <string name="poi_piste_grooming">Preparação de pista</string>
     <string name="poi_seasonal">Sazonal</string>
     <string name="poi_water_characteristic">Característica da água</string>
-    <string name="poi_health_specialty">Especialidade de saúde</string>
+    <string name="poi_healthcare_speciality">Especialidade de saúde</string>
     <string name="poi_home_visit">Visita domiciliar</string>
     <string name="poi_social_facility_for">Público-alvo</string>
     <string name="poi_animal_shelter_purpose">Finalidade</string>
@@ -2399,78 +2399,78 @@
     <string name="poi_craft_electronics_repair">Reparação de aparelhos eletrónicos</string>
     <string name="poi_fireworks">Loja de fogo de artifício</string>
     <string name="poi_aerialway_length">Comprimento</string>
-    <string name="poi_health_specialty_general_yes">Clínica geral</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Oftalmologia</string>
-    <string name="poi_health_specialty_gynaecology_yes">Ginecologia</string>
-    <string name="poi_health_specialty_internal_yes">Medicina interna</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ortopedia</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Otorrinolaringologia</string>
-    <string name="poi_health_specialty_paediatrics_yes">Pediatria</string>
+    <string name="poi_healthcare_speciality_general">Clínica geral</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Oftalmologia</string>
+    <string name="poi_healthcare_speciality_gynaecology">Ginecologia</string>
+    <string name="poi_healthcare_speciality_internal">Medicina interna</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ortopedia</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Otorrinolaringologia</string>
+    <string name="poi_healthcare_speciality_paediatrics">Pediatria</string>
     <string name="poi_health_specialty_paediatrics_no">Especialidade médica: sem pediatria</string>
-    <string name="poi_health_specialty_dermatology_yes">Dermatologia</string>
-    <string name="poi_health_specialty_urology_yes">Urologia</string>
-    <string name="poi_health_specialty_surgery_yes">Cirurgia geral</string>
-    <string name="poi_health_specialty_radiology_yes">Radiologia</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Radioterapia</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psiquiatria</string>
-    <string name="poi_health_specialty_neurology_yes">Neurologia</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Dermatovenereologia</string>
-    <string name="poi_health_specialty_cardiology_yes">Cardiologia</string>
-    <string name="poi_health_specialty_trauma_yes">Traumatologia</string>
-    <string name="poi_health_specialty_biology_yes">Bioclínica</string>
-    <string name="poi_health_specialty_osteopathy_yes">Osteopatia</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Anestesiologia</string>
-    <string name="poi_health_specialty_pulmonology_yes">Pneumologia</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Cirurgia dental, oral e maxilofacial</string>
-    <string name="poi_health_specialty_maternity_yes">Maternidade</string>
-    <string name="poi_health_specialty_emergency_yes">Medicina de urgência</string>
+    <string name="poi_healthcare_speciality_dermatology">Dermatologia</string>
+    <string name="poi_healthcare_speciality_urology">Urologia</string>
+    <string name="poi_healthcare_speciality_surgery">Cirurgia geral</string>
+    <string name="poi_healthcare_speciality_radiology">Radiologia</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Radioterapia</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psiquiatria</string>
+    <string name="poi_healthcare_speciality_neurology">Neurologia</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Dermatovenereologia</string>
+    <string name="poi_healthcare_speciality_cardiology">Cardiologia</string>
+    <string name="poi_healthcare_speciality_trauma">Traumatologia</string>
+    <string name="poi_healthcare_speciality_biology">Bioclínica</string>
+    <string name="poi_healthcare_speciality_osteopathy">Osteopatia</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Anestesiologia</string>
+    <string name="poi_healthcare_speciality_pulmonology">Pneumologia</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Cirurgia dental, oral e maxilofacial</string>
+    <string name="poi_healthcare_speciality_maternity">Maternidade</string>
+    <string name="poi_healthcare_speciality_emergency">Medicina de urgência</string>
     <string name="poi_health_specialty_emergency_medicine_no">Sem medicina de urgência</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Cirurgia plástica</string>
-    <string name="poi_health_specialty_orthodontics_yes">Ortodontia</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Fisioterapia</string>
-    <string name="poi_health_specialty_biochemistry_yes">Bioquímica</string>
-    <string name="poi_health_specialty_occupational_yes">Terapia ocupacional</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Psiquiatria infantil</string>
-    <string name="poi_health_specialty_physiatry_yes">Fisiatria e reabilitação</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Cirurgia maxilofacial</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Radiologia diagnóstica</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gastroenterologia</string>
-    <string name="poi_health_specialty_stomatology_yes">Medicina dentária (odontologia)</string>
-    <string name="poi_health_specialty_nephrology_yes">Nefrologia (doenças renais)</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Neurocirurgia</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Neuropsiquiatria</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endocrinologia</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Medicina nuclear</string>
-    <string name="poi_health_specialty_pathology_yes">Anatomia patológica</string>
-    <string name="poi_health_specialty_oncology_yes">Oncologia</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Medicina tropical</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Cirurgia plástica</string>
+    <string name="poi_healthcare_speciality_orthodontics">Ortodontia</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Fisioterapia</string>
+    <string name="poi_healthcare_speciality_biochemistry">Bioquímica</string>
+    <string name="poi_healthcare_speciality_occupational">Terapia ocupacional</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Psiquiatria infantil</string>
+    <string name="poi_healthcare_speciality_physiatry">Fisiatria e reabilitação</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Cirurgia maxilofacial</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Radiologia diagnóstica</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gastroenterologia</string>
+    <string name="poi_healthcare_speciality_stomatology">Medicina dentária (odontologia)</string>
+    <string name="poi_healthcare_speciality_nephrology">Nefrologia (doenças renais)</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Neurocirurgia</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Neuropsiquiatria</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endocrinologia</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Medicina nuclear</string>
+    <string name="poi_healthcare_speciality_pathology">Anatomia patológica</string>
+    <string name="poi_healthcare_speciality_oncology">Oncologia</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Medicina tropical</string>
     <string name="poi_health_specialty_tropical_medicine_no">Sem medicina tropical</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">Obstetrícia (pós-natal)</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">Obstetrícia (pós-natal)</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">Sem obstetrícia (pós-natal)</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Obstetrícia (pré-natal)</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Obstetrícia (pré-natal)</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Sem obstetrícia (pré-natal)</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Pediatria social</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Pediatria social</string>
     <string name="poi_health_specialty_social_paediatrics_no">Sem pediatria social</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Obstetrícia (cesariana)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Obstetrícia (cesariana)</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Sem obstetrícia (cesariana)</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">Toxicologia clínica</string>
-    <string name="poi_health_specialty_optometry_yes">Optometria</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Patologia clínica</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Fonoaudiologia (terapia da fala)</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Terapia manual</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Medicina do desporto</string>
-    <string name="poi_health_specialty_podiatry_yes">Podologia</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Psiquiatria adulta</string>
-    <string name="poi_health_specialty_acupuncture_yes">Acupuntura</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homeopatia</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Medicina tradicional chinesa</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
-    <string name="poi_health_specialty_herbalism_yes">Fitoterapia</string>
-    <string name="poi_health_specialty_chiropractic_yes">Quiropraxia</string>
-    <string name="poi_health_specialty_naturopathy_yes">Naturopatia</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Psicologia profunda</string>
-    <string name="poi_health_specialty_behavior_yes">Comportamental</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Medicina paliativa</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">Toxicologia clínica</string>
+    <string name="poi_healthcare_speciality_optometry">Optometria</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Patologia clínica</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Fonoaudiologia (terapia da fala)</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Terapia manual</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Medicina do desporto</string>
+    <string name="poi_healthcare_speciality_podiatry">Podologia</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Psiquiatria adulta</string>
+    <string name="poi_healthcare_speciality_acupuncture">Acupuntura</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homeopatia</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Medicina tradicional chinesa</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
+    <string name="poi_healthcare_speciality_herbalism">Fitoterapia</string>
+    <string name="poi_healthcare_speciality_chiropractic">Quiropraxia</string>
+    <string name="poi_healthcare_speciality_naturopathy">Naturopatia</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Psicologia profunda</string>
+    <string name="poi_healthcare_speciality_behavior">Comportamental</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Medicina paliativa</string>
     <string name="poi_building_type_pyramid">Tipo de edifício: pirâmide</string>
     <string name="poi_fitness_centre">Ginásio / academia desportiva</string>
     <string name="poi_fitness">Exercício físico</string>
@@ -3857,7 +3857,7 @@
     <string name="poi_mobile_money_agent">Agente de dinheiro móvel</string>
     <string name="poi_lifeguard_base">Base de salva-vidas</string>
     <string name="poi_vaccination_covid19">Vacinação: COVID19</string>
-    <string name="poi_health_specialty_vaccination_yes">Vacinação</string>
+    <string name="poi_healthcare_speciality_vaccination">Vacinação</string>
     <string name="poi_waste_transfer_station">Estação de transferência de resíduos</string>
     <string name="poi_weighbridge">Báscula-ponte (balança de veículos);Ponte báscula</string>
     <string name="poi_water_source_lake">Lago</string>
@@ -4601,38 +4601,38 @@
     <string name="poi_motorcar_designated">Destinado a automóveis</string>
     <string name="poi_vehicle_designated">Destinado a veículos</string>
     <string name="poi_socket_typee_output_medium">Média</string>
-    <string name="poi_health_specialty_allergology_yes">Alergia</string>
+    <string name="poi_healthcare_speciality_allergology">Alergia</string>
     <string name="poi_socket_typee_output_high">Alta</string>
     <string name="poi_socket_typee_voltage_high">Alta</string>
     <string name="poi_socket_typee">Tomadas: Tipo E</string>
     <string name="poi_socket_typee_output_low">Baixa</string>
-    <string name="poi_health_specialty_rheumatology_yes">Reumatologia</string>
-    <string name="poi_health_specialty_fertility_yes">Fertilidade</string>
-    <string name="poi_health_specialty_dialysis_yes">Diálise</string>
-    <string name="poi_health_specialty_endodontics_yes">Endodontia</string>
-    <string name="poi_health_specialty_covid19_yes">COVID19</string>
-    <string name="poi_health_specialty_vascular_surgery_yes">Cirurgia vascular</string>
-    <string name="poi_health_specialty_massage_therapy_yes">Terapia de massagem</string>
+    <string name="poi_healthcare_speciality_rheumatology">Reumatologia</string>
+    <string name="poi_healthcare_speciality_fertility">Fertilidade</string>
+    <string name="poi_healthcare_speciality_dialysis">Diálise</string>
+    <string name="poi_healthcare_speciality_endodontics">Endodontia</string>
+    <string name="poi_healthcare_speciality_covid19">COVID19</string>
+    <string name="poi_healthcare_speciality_vascular_surgery">Cirurgia vascular</string>
+    <string name="poi_healthcare_speciality_massage_therapy">Terapia de massagem</string>
     <string name="poi_socket_typee_voltage_low">Baixa</string>
-    <string name="poi_health_specialty_community_yes">Comunidade</string>
-    <string name="poi_health_specialty_cardiac_surgery_yes">Cirurgia cardíaca</string>
+    <string name="poi_healthcare_speciality_community">Comunidade</string>
+    <string name="poi_healthcare_speciality_cardiac_surgery">Cirurgia cardíaca</string>
     <string name="poi_socket_typee_voltage_medium">Média</string>
-    <string name="poi_health_specialty_haematology_yes">Hematologia</string>
-    <string name="poi_health_specialty_geriatrics_yes">Geriatria</string>
-    <string name="poi_health_specialty_weight_loss_yes">Perda de peso</string>
-    <string name="poi_health_specialty_infectious_diseases_yes">Doenças infeciosas</string>
+    <string name="poi_healthcare_speciality_haematology">Hematologia</string>
+    <string name="poi_healthcare_speciality_geriatrics">Geriatria</string>
+    <string name="poi_healthcare_speciality_weight_loss">Perda de peso</string>
+    <string name="poi_healthcare_speciality_infectious_diseases">Doenças infeciosas</string>
     <string name="poi_socket_typee_voltage_filter">Voltagem da tomada tipo E</string>
     <string name="poi_socket_typee_current">Tomadas: Tipo E: amperes</string>
     <string name="poi_checkpoint_cycling">Posto de controlo de ciclismo</string>
     <string name="poi_socket_typee_yes">Tipo E</string>
     <string name="poi_socket_typee_output_filter">Saída da tomada tipo E</string>
-    <string name="poi_health_specialty_intensive_yes">Cuidados intensivos</string>
+    <string name="poi_healthcare_speciality_intensive">Cuidados intensivos</string>
     <string name="poi_socket_typee_voltage">Tomadas: Tipo E: voltagem</string>
     <string name="poi_socket_typee_output">Tomadas: Tipo E: watts</string>
-    <string name="poi_health_specialty_periodontics_yes">Periodontia</string>
+    <string name="poi_healthcare_speciality_periodontics">Periodontia</string>
     <string name="poi_dressing_room">Vestiário</string>
-    <string name="poi_health_specialty_blood_check_yes">Análises sanguíneas</string>
+    <string name="poi_healthcare_speciality_blood_check">Análises sanguíneas</string>
     <string name="poi_emergency_bay">Área de emergência</string>
-    <string name="poi_health_specialty_paediatric_surgery_yes">Cirurgia pediátrica</string>
-    <string name="poi_health_specialty_paediatric_dentistry_yes">Odontopediatria</string>
+    <string name="poi_healthcare_speciality_paediatric_surgery">Cirurgia pediátrica</string>
+    <string name="poi_healthcare_speciality_paediatric_dentistry">Odontopediatria</string>
 </resources>
