--- a/OsmAnd/res/values-tr/phrases.xml
+++ b/OsmAnd/res/values-tr/phrases.xml
@@ -1061,7 +1061,7 @@
     <string name="poi_beach_surface_type">Yüzey</string>
     <string name="poi_nudism">Çıplaklık</string>
     <string name="poi_diet">Diyet</string>
-    <string name="poi_health_specialty">Sağlık uzmanlığı</string>
+    <string name="poi_healthcare_speciality">Sağlık uzmanlığı</string>
     <string name="poi_massage_type">Masaj türü</string>
     <string name="poi_tents">Çadırlar</string>
     <string name="poi_washing_machine">Çamaşır makinesi</string>
@@ -2466,78 +2466,78 @@
     <string name="poi_hackerspace">Hackerspace</string>
     <string name="poi_fitness_station">Fitness istasyonu</string>
     <string name="poi_building_type_pyramid">Bina türü: piramit</string>
-    <string name="poi_health_specialty_palliative_medicine_yes">Palyatif tıp</string>
-    <string name="poi_health_specialty_behavior_yes">Davranış</string>
-    <string name="poi_health_specialty_depth_psychology_yes">Derinlik psikolojisi</string>
-    <string name="poi_health_specialty_naturopathy_yes">Naturopati</string>
-    <string name="poi_health_specialty_chiropractic_yes">Kayropraktik</string>
-    <string name="poi_health_specialty_herbalism_yes">Bitkisel tıp</string>
-    <string name="poi_health_specialty_reiki_yes">Reiki</string>
-    <string name="poi_health_specialty_traditional_chinese_medicine_yes">Geleneksel Çin tıbbı</string>
-    <string name="poi_health_specialty_homeopathy_yes">Homeopati</string>
-    <string name="poi_health_specialty_acupuncture_yes">Akupunktur</string>
-    <string name="poi_health_specialty_adult_psychiatry_yes">Yetişkin psikiyatrisi</string>
-    <string name="poi_health_specialty_podiatry_yes">Podoloji</string>
-    <string name="poi_health_specialty_sports_medicine_yes">Spor hekimliği</string>
-    <string name="poi_health_specialty_manual_therapy_yes">Manuel terapi</string>
-    <string name="poi_health_specialty_speech_therapy_yes">Konuşma terapisi</string>
-    <string name="poi_health_specialty_clinical_pathology_yes">Klinik patoloji</string>
-    <string name="poi_health_specialty_optometry_yes">Optometri</string>
-    <string name="poi_health_specialty_addiction_medicine_yes">Bağımlılık tedavisi</string>
+    <string name="poi_healthcare_speciality_palliative_medicine">Palyatif tıp</string>
+    <string name="poi_healthcare_speciality_behavior">Davranış</string>
+    <string name="poi_healthcare_speciality_depth_psychology">Derinlik psikolojisi</string>
+    <string name="poi_healthcare_speciality_naturopathy">Naturopati</string>
+    <string name="poi_healthcare_speciality_chiropractic">Kayropraktik</string>
+    <string name="poi_healthcare_speciality_herbalism">Bitkisel tıp</string>
+    <string name="poi_healthcare_speciality_reiki">Reiki</string>
+    <string name="poi_healthcare_speciality_traditional_chinese_medicine">Geleneksel Çin tıbbı</string>
+    <string name="poi_healthcare_speciality_homeopathy">Homeopati</string>
+    <string name="poi_healthcare_speciality_acupuncture">Akupunktur</string>
+    <string name="poi_healthcare_speciality_adult_psychiatry">Yetişkin psikiyatrisi</string>
+    <string name="poi_healthcare_speciality_podiatry">Podoloji</string>
+    <string name="poi_healthcare_speciality_sports_medicine">Spor hekimliği</string>
+    <string name="poi_healthcare_speciality_manual_therapy">Manuel terapi</string>
+    <string name="poi_healthcare_speciality_speech_therapy">Konuşma terapisi</string>
+    <string name="poi_healthcare_speciality_clinical_pathology">Klinik patoloji</string>
+    <string name="poi_healthcare_speciality_optometry">Optometri</string>
+    <string name="poi_healthcare_speciality_addiction_medicine">Bağımlılık tedavisi</string>
     <string name="poi_health_specialty_obstetrics_caesarean_section_no">Sağlık uzmanlığı: obstetrik (sezaryen): hayır</string>
-    <string name="poi_health_specialty_obstetrics_caesarean_section_yes">Obstetrik (sezaryen)</string>
+    <string name="poi_healthcare_speciality_obstetrics_caesarean_section">Obstetrik (sezaryen)</string>
     <string name="poi_health_specialty_social_paediatrics_no">Sağlık uzmanlığı: sosyal pediatri: hayır</string>
-    <string name="poi_health_specialty_social_paediatrics_yes">Sosyal pediatri</string>
+    <string name="poi_healthcare_speciality_social_paediatrics">Sosyal pediatri</string>
     <string name="poi_health_specialty_obstetrics_antenatal_no">Sağlık uzmanlığı: obstetrik (doğum öncesi): hayır</string>
-    <string name="poi_health_specialty_obstetrics_antenatal_yes">Obstetrik (doğum öncesi)</string>
+    <string name="poi_healthcare_speciality_obstetrics_antenatal">Obstetrik (doğum öncesi)</string>
     <string name="poi_health_specialty_obstetrics_postnatal_no">Sağlık uzmanlığı: obstetrik (doğum sonrası): hayır</string>
-    <string name="poi_health_specialty_obstetrics_postnatal_yes">Obstetrik (doğum sonrası)</string>
+    <string name="poi_healthcare_speciality_obstetrics_postnatal">Obstetrik (doğum sonrası)</string>
     <string name="poi_health_specialty_tropical_medicine_no">Sağlık uzmanlığı: tropikal tıp: hayır</string>
-    <string name="poi_health_specialty_tropical_medicine_yes">Tropikal tıp</string>
-    <string name="poi_health_specialty_oncology_yes">Onkoloji</string>
-    <string name="poi_health_specialty_pathology_yes">Patolojik anatomi</string>
-    <string name="poi_health_specialty_nuclear_medicine_yes">Nükleer tıp</string>
-    <string name="poi_health_specialty_endocrinology_yes">Endokrinoloji</string>
-    <string name="poi_health_specialty_neuropsychiatry_yes">Nöropsikiyatri</string>
-    <string name="poi_health_specialty_neurosurgery_yes">Beyin ve sinir cerrahisi</string>
-    <string name="poi_health_specialty_nephrology_yes">Nefroloji (böbrek hastalıkları)</string>
-    <string name="poi_health_specialty_stomatology_yes">Diş hekimliği</string>
-    <string name="poi_health_specialty_gastroenterology_yes">Gastroenteroloji</string>
-    <string name="poi_health_specialty_diagnostic_radiology_yes">Tıbbi görüntüleme</string>
-    <string name="poi_health_specialty_maxillofacial_surgery_yes">Çene-yüz cerrahisi</string>
-    <string name="poi_health_specialty_physiatry_yes">Fiziksel tıp ve rehabilitasyon</string>
-    <string name="poi_health_specialty_child_psychiatry_yes">Çocuk psikiyatrisi</string>
-    <string name="poi_health_specialty_occupational_yes">İş terapisi</string>
-    <string name="poi_health_specialty_biochemistry_yes">Biyokimya</string>
-    <string name="poi_health_specialty_physiotherapy_yes">Fizyoterapi</string>
-    <string name="poi_health_specialty_orthodontics_yes">Ortodonti</string>
-    <string name="poi_health_specialty_plastic_surgery_yes">Plastik cerrahi</string>
+    <string name="poi_healthcare_speciality_tropical_medicine">Tropikal tıp</string>
+    <string name="poi_healthcare_speciality_oncology">Onkoloji</string>
+    <string name="poi_healthcare_speciality_pathology">Patolojik anatomi</string>
+    <string name="poi_healthcare_speciality_nuclear_medicine">Nükleer tıp</string>
+    <string name="poi_healthcare_speciality_endocrinology">Endokrinoloji</string>
+    <string name="poi_healthcare_speciality_neuropsychiatry">Nöropsikiyatri</string>
+    <string name="poi_healthcare_speciality_neurosurgery">Beyin ve sinir cerrahisi</string>
+    <string name="poi_healthcare_speciality_nephrology">Nefroloji (böbrek hastalıkları)</string>
+    <string name="poi_healthcare_speciality_stomatology">Diş hekimliği</string>
+    <string name="poi_healthcare_speciality_gastroenterology">Gastroenteroloji</string>
+    <string name="poi_healthcare_speciality_diagnostic_radiology">Tıbbi görüntüleme</string>
+    <string name="poi_healthcare_speciality_maxillofacial_surgery">Çene-yüz cerrahisi</string>
+    <string name="poi_healthcare_speciality_physiatry">Fiziksel tıp ve rehabilitasyon</string>
+    <string name="poi_healthcare_speciality_child_psychiatry">Çocuk psikiyatrisi</string>
+    <string name="poi_healthcare_speciality_occupational">İş terapisi</string>
+    <string name="poi_healthcare_speciality_biochemistry">Biyokimya</string>
+    <string name="poi_healthcare_speciality_physiotherapy">Fizyoterapi</string>
+    <string name="poi_healthcare_speciality_orthodontics">Ortodonti</string>
+    <string name="poi_healthcare_speciality_plastic_surgery">Plastik cerrahi</string>
     <string name="poi_health_specialty_emergency_medicine_no">Sağlık uzmanlığı: kaza ve acil tıp: hayır</string>
-    <string name="poi_health_specialty_emergency_yes">Kaza ve acil tıp</string>
-    <string name="poi_health_specialty_maternity_yes">Hamilelik</string>
-    <string name="poi_health_specialty_dental_oral_maxillo_facial_surgery_yes">Diş, ağız ve çene-yüz cerrahisi</string>
-    <string name="poi_health_specialty_pulmonology_yes">Göğüs hastalıkları</string>
-    <string name="poi_health_specialty_anaesthetics_yes">Anesteziyoloji</string>
-    <string name="poi_health_specialty_osteopathy_yes">Osteopati</string>
-    <string name="poi_health_specialty_biology_yes">Klinik biyoloji</string>
-    <string name="poi_health_specialty_trauma_yes">Travmatoloji</string>
-    <string name="poi_health_specialty_cardiology_yes">Kardiyoloji</string>
-    <string name="poi_health_specialty_dermatovenereology_yes">Dermato-venereoloji</string>
-    <string name="poi_health_specialty_neurology_yes">Nöroloji</string>
-    <string name="poi_health_specialty_psychiatry_yes">Psikiyatri</string>
-    <string name="poi_health_specialty_radiotherapy_yes">Radyoterapi</string>
-    <string name="poi_health_specialty_radiology_yes">Radyoloji</string>
-    <string name="poi_health_specialty_surgery_yes">Genel cerrahi</string>
-    <string name="poi_health_specialty_urology_yes">Üroloji</string>
-    <string name="poi_health_specialty_dermatology_yes">Dermatoloji</string>
+    <string name="poi_healthcare_speciality_emergency">Kaza ve acil tıp</string>
+    <string name="poi_healthcare_speciality_maternity">Hamilelik</string>
+    <string name="poi_healthcare_speciality_dental_oral_maxillo_facial_surgery">Diş, ağız ve çene-yüz cerrahisi</string>
+    <string name="poi_healthcare_speciality_pulmonology">Göğüs hastalıkları</string>
+    <string name="poi_healthcare_speciality_anaesthetics">Anesteziyoloji</string>
+    <string name="poi_healthcare_speciality_osteopathy">Osteopati</string>
+    <string name="poi_healthcare_speciality_biology">Klinik biyoloji</string>
+    <string name="poi_healthcare_speciality_trauma">Travmatoloji</string>
+    <string name="poi_healthcare_speciality_cardiology">Kardiyoloji</string>
+    <string name="poi_healthcare_speciality_dermatovenereology">Dermato-venereoloji</string>
+    <string name="poi_healthcare_speciality_neurology">Nöroloji</string>
+    <string name="poi_healthcare_speciality_psychiatry">Psikiyatri</string>
+    <string name="poi_healthcare_speciality_radiotherapy">Radyoterapi</string>
+    <string name="poi_healthcare_speciality_radiology">Radyoloji</string>
+    <string name="poi_healthcare_speciality_surgery">Genel cerrahi</string>
+    <string name="poi_healthcare_speciality_urology">Üroloji</string>
+    <string name="poi_healthcare_speciality_dermatology">Dermatoloji</string>
     <string name="poi_health_specialty_paediatrics_no">Sağlık uzmanlığı: pediatri: hayır</string>
-    <string name="poi_health_specialty_paediatrics_yes">Pediatri</string>
-    <string name="poi_health_specialty_otolaryngology_yes">Kulak burun boğaz</string>
-    <string name="poi_health_specialty_orthopaedics_yes">Ortopedi</string>
-    <string name="poi_health_specialty_internal_yes">İç hastalıkları</string>
-    <string name="poi_health_specialty_gynaecology_yes">Jinekoloji</string>
-    <string name="poi_health_specialty_ophthalmology_yes">Oftalmoloji</string>
-    <string name="poi_health_specialty_general_yes">Pratisyen doktor</string>
+    <string name="poi_healthcare_speciality_paediatrics">Pediatri</string>
+    <string name="poi_healthcare_speciality_otolaryngology">Kulak burun boğaz</string>
+    <string name="poi_healthcare_speciality_orthopaedics">Ortopedi</string>
+    <string name="poi_healthcare_speciality_internal">İç hastalıkları</string>
+    <string name="poi_healthcare_speciality_gynaecology">Jinekoloji</string>
+    <string name="poi_healthcare_speciality_ophthalmology">Oftalmoloji</string>
+    <string name="poi_healthcare_speciality_general">Pratisyen doktor</string>
     <string name="poi_cargo_hgv">Ağır yük araçları</string>
     <string name="poi_cargo_bicycle">Bisikletler</string>
     <string name="poi_cargo_container">Konteynerler</string>
@@ -3279,7 +3279,7 @@
     <string name="poi_waste_transfer_station">Atık aktarım istasyonu</string>
     <string name="poi_water_source_powered_pump">Elektrikli pompa</string>
     <string name="poi_water_source_water_tank">Su deposu</string>
-    <string name="poi_health_specialty_vaccination_yes">Aşılama</string>
+    <string name="poi_healthcare_speciality_vaccination">Aşılama</string>
     <string name="poi_liaison_representative_office">Temsilcilik</string>
     <string name="poi_liaison_liaison_office">Büro</string>
     <string name="poi_departures_board_yes">Evet</string>
