--- a/OsmAnd/res/values-zh-rCN/phrases.xml
+++ b/OsmAnd/res/values-zh-rCN/phrases.xml
@@ -937,7 +937,7 @@
     <string name="poi_animal_shelter_wildlife">野生动物</string>
     <string name="poi_shelter_type_wildlife_hide">野生动物隐匿处</string>
     <string name="poi_wildlife_hide">观察野生动物的场所</string>
-    <string name="poi_health_specialty_emergency_yes">事故和急救医学</string>
+    <string name="poi_healthcare_speciality_emergency">事故和急救医学</string>
     <string name="poi_emergency_yes">紧急情况：是</string>
     <string name="poi_animal_keeping">动物饲养</string>
     <string name="poi_animal_keeping_horse">动物饲养：马匹</string>
@@ -961,7 +961,7 @@
     <string name="poi_checkpoint_type">检查点类型</string>
     <string name="poi_microbrewery">微型酿酒厂</string>
     <string name="poi_denotation">说明</string>
-    <string name="poi_health_specialty">健康专业</string>
+    <string name="poi_healthcare_speciality">健康专业</string>
     <string name="poi_marketplace">公共市场</string>
     <string name="poi_baby_goods">婴儿用品</string>
     <string name="poi_garden_centre">园艺中心</string>
@@ -2270,7 +2270,7 @@
     <string name="poi_gpx_point">GPX 点</string>
     <string name="poi_parking_rooftop">屋顶</string>
     <string name="poi_parking_sheds">车棚</string>
-    <string name="poi_health_specialty_vaccination_yes">疫苗接种</string>
+    <string name="poi_healthcare_speciality_vaccination">疫苗接种</string>
     <string name="poi_water_source_tube_well">管井</string>
     <string name="poi_water_source_powered_pump">动力泵</string>
     <string name="poi_water_source_well">井</string>
